--- a/data/cards/00002511.yaml
+++ b/data/cards/00002511.yaml
@@ -2,11 +2,11 @@ konami_id: 17366
 password: 2511
 name:
   en: Labrynth Cooclock
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Labrynth-Kuckuhr
+  es: Reloj Cucú del Labrislinto
+  fr: Penducoucou Labrynth
+  it: Labrinto Cuuorologio
+  pt: Cucológio Labrinto
   ja: <ruby>白銀の城の狂時計<rt>ラビュリンス・クックロック</rt></ruby>
   ja_romaji: Rabyurinsu Kukkurokku
   ko: 라뷰린스 쿠클락
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     (Quick Effect): You can discard this card; this turn, you can activate 1 Normal Trap Card that was Set this turn, if you control a "Labrynth" monster. If a card(s) is sent from your hand to the GY to activate your Normal Trap Card or your "Labrynth" card or effect, except "Labrynth Cooclock", while this card is in your GY (except during the Damage Step): You can add this card to your hand, or Special Summon it. You can only use each effect of "Labrynth Cooclock" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    (Schnelleffekt): Du kannst diese Karte abwerfen; in diesem Spielzug kannst du 1 Normale Fallenkarte aktivieren, die in diesem Spielzug gesetzt wurde, falls du ein „Labrynth“-Monster kontrollierst. Falls eine oder mehr Karten von deiner Hand auf den Friedhof gelegt werden, um deine Normale Fallenkarte oder deine/n „Labrynth“-Karte oder -Effekt zu aktivieren, außer „Labrynth-Kuckuhr“, solange diese Karte in deinem Friedhof liegt (außer während des Damage Steps): Du kannst diese Karte deiner Hand hinzufügen oder als Spezialbeschwörung beschwören. Du kannst jeden Effekt von „Labrynth-Kuckuhr“ nur einmal pro Spielzug verwenden.
+  es: |-
+    (Efecto Rápido): puedes descartar esta carta; este turno, si controlas un monstruo "Labrislinto", puedes activar 1 Carta de Trampa Normal que haya sido Colocada este turno. Si una o más cartas son mandadas de tu mano al Cementerio para activar tu Carta de Trampa Normal o tu carta o efecto "Labrislinto", excepto "Reloj Cucú del Labrislinto", mientras esta carta esté en tu Cementerio (excepto durante el Damage Step): puedes añadir esta carta a tu mano, o Invocarla de Modo Especial. Sólo puedes usar cada efecto de "Reloj Cucú del Labrislinto" una vez por turno.
+  fr: |-
+    (Effet Rapide) : vous pouvez défausser cette carte ; ce tour, vous pouvez activer 1 Carte Piège Normal qui a été Posée ce tour, si vous contrôlez un monstre "Labrynth". Si une ou plusieurs cartes sont envoyées depuis votre main au Cimetière pour activer votre Carte Piège Normal ou votre carte ou effet "Labrynth" ("Penducoucou Labrynth" exclu), tant que cette carte est dans votre Cimetière (sauf durant la Damage Step) : vous pouvez ajouter cette carte à votre main, ou l'Invoquer Spécialement. Vous ne pouvez utiliser chaque effet de "Penducoucou Labrynth" qu'une fois par tour.
+  it: |-
+    (Effetto Rapido): puoi scartare questa carta; in questo turno, puoi attivare 1 Carta Trappola Normale che è stata Posizionata in questo turno, se controlli un mostro "Labrinto". Se una o più carte vengono mandate dalla tua mano al Cimitero per attivare una tua Carta Trappola Normale o una tua carta "Labrinto" o un suo effetto, eccetto "Labrinto Cuuorologio", mentre questa carta è nel tuo Cimitero (eccetto durante il Damage Step): puoi aggiungere questa carta alla tua mano, o Evocarla Specialmente. Puoi utilizzare ogni effetto di "Labrinto Cuuorologio" una sola volta per turno.
+  pt: |-
+    (Efeito Rápido): você pode descartar este card; neste turno, você pode ativar 1 Card de Armadilha Normal que foi Baixado neste turno, se você controlar um monstro "Labrinto". Se um ou mais cards forem enviados da sua mão para o Cemitério para ativar um Card de Armadilha Normal seu ou um card ou efeito "Labrinto" seu, exceto "Cucológio Labrinto", enquanto este card estiver no seu Cemitério (exceto durante a Etapa de Dano): você pode adicionar este card à sua mão ou Invocá-lo por Invocação-Especial. Você só pode usar cada efeito de "Cucológio Labrinto" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードを手札から捨てて発動できる。このターン、自分フィールドに「ラビュリンス」モンスターが存在する場合、自分は通常罠カード１枚をセットしたターンに発動できる。この効果は相手ターンでも発動できる。②：このカードが墓地に存在する状態で、「白銀の城の狂時計」以外の「ラビュリンス」カードの効果または通常罠カードを自分が発動するために、手札のカードが墓地へ送られた場合に発動できる。このカードを手札に加えるか特殊召喚する。
   ko: |-
