--- a/data/cards/01225009.yaml
+++ b/data/cards/01225009.yaml
@@ -2,11 +2,11 @@ konami_id: 17363
 password: 1225009
 name:
   en: Arianna the Labrynth Servant
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Arianna die Labrynth-Dienerin
+  es: Arianna la Sirviente del Labrislinto
+  fr: Arianna la Domestique Labrynth
+  it: Arianna la Servitrice del Labrinto
+  pt: Arianna, a Serva de Labrinto
   ja: <ruby>白銀の城の召使い<rt>ラビュリンス・サーバンツ</rt></ruby> アリアンナ
   ja_romaji: Rabyurinsu Sābantsu Arianna
   ko: 라뷰린스 서번츠 아리안나
@@ -18,11 +18,26 @@ text:
     If this card is Normal or Special Summoned: You can add 1 "Labrynth" card from your Deck to your hand, except "Arianna the Labrynth Servant". If another monster(s) leaves the field by your Normal Trap effect (except during the Damage Step): You can draw 1 card, then you can apply this effect.
     ● From your hand, either Special Summon 1 Fiend monster, or Set 1 Spell/Trap.
     You can only use 1 "Arianna the Labrynth Servant" effect per turn, and only once that turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 „Labrynth“-Karte von deinem Deck hinzufügen, außer „Arianna die Labrynth-Dienerin“. Falls ein oder mehr andere Monster das Spielfeld durch deinen Normalen Falleneffekt verlassen (außer während des Damage Steps): Du kannst 1 Karte ziehen, dann kannst du diesen Effekt ausführen.
+    ● Beschwöre 1 Unterweltler-Monster als Spezialbeschwörung von deiner Hand oder setze 1 Zauber/Falle von deiner Hand.
+    Du kannst nur 1 Effekt von „Arianna die Labrynth-Dienerin“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
+  es: |-
+    Si esta carta es Invocada de Modo Normal o Especial: puedes añadir a tu mano 1 carta "Labrislinto" en tu Deck, excepto "Arianna la Sirviente del Labrislinto". Si otro u otros monstruos dejan el Campo por efecto de tu Trampa Normal (excepto durante el Damage Step): puedes robar 1 carta, y después puedes aplicar este efecto.
+    ● Desde tu mano, ya sea Invoca de Modo Especial 1 monstruo Demonio, o Coloca 1 Mágica/Trampa.
+    Sólo puedes usar 1 efecto de "Arianna la Sirviente del Labrislinto" por turno, y sólo una vez ese turno.
+  fr: |-
+    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez ajouter 1 carte "Labrynth" ("Arianna la Domestique Labrynth" exclu) depuis votre Deck à votre main. Si un ou plusieurs autres monstres quittent le Terrain par votre effet de Piège Normal (sauf durant la Damage Step) : vous pouvez piocher 1 carte, puis vous pouvez appliquer cet effet.
+    ● Depuis votre main, soit Invoquez Spécialement 1 monstre Démon, soit Posez 1 Magie/Piège.
+    Vous ne pouvez utiliser qu'1 effet de "Arianna la Domestique Labrynth" par tour, et uniquement une fois le tour.
+  it: |-
+    Se questa carta viene Evocata Normalmente o Specialmente: puoi aggiungere 1 carta "Labrinto" dal tuo Deck alla tua mano, eccetto "Arianna la Servitrice del Labrinto". Se uno o più altri mostri lasciano il Terreno per l'effetto di una tua Trappola Normale (eccetto durante il Damage Step): puoi pescare 1 carta, poi puoi applicare questo effetto.
+    ● Dalla tua mano, Evoca Specialmente 1 mostro Demone, oppure Posiziona 1 Magia/Trappola.
+    Puoi utilizzare solo 1 effetto di "Arianna la Servitrice del Labrinto" per turno, e solo una volta in quel turno.
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 card "Labrinto" do seu Deck à sua mão, exceto "Arianna, a Serva de Labrinto". Se um ou mais outros monstros deixarem o campo pelo efeito de uma Armadilha Normal sua (exceto durante a Etapa de Dano): você pode comprar 1 card e, depois, você pode aplicar este efeito.
+    ● Da sua mão, Invoque 1 monstro Demônio por Invocação-Especial ou Baixe 1 Magia/Armadilha.
+    Você só pode usar 1 efeito de "Arianna, a Serva de Labrinto" por turno e apenas uma vez por turno.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから「白銀の城の召使い アリアンナ」以外の「ラビュリンス」カード１枚を手札に加える。②：自分の通常罠カードの効果でモンスターがフィールドから離れた場合に発動できる。自分はデッキから１枚ドローする。その後、以下の効果を適用できる。●手札から、悪魔族モンスター１体を特殊召喚するか、魔法・罠カード１枚をセットする。
   ko: |-
