--- a/data/cards/05380979.yaml
+++ b/data/cards/05380979.yaml
@@ -2,11 +2,11 @@ konami_id: 17369
 password: 5380979
 name:
   en: Welcome Labrynth
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Willkommens-Labrynth
+  es: Bienvenida del Labrislinto
+  fr: Bienvenue Labrynth
+  it: Benvenuto Labrinto
+  pt: Boas-vindas a Labrinto
   ja: ウェルカム・ラビュリンス
   ja_romaji: Werukamu Rabyurinsu
   ko: 웰컴 라뷰린스
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Special Summon 1 "Labrynth" monster from your Deck, also until the end of the next turn after this card resolves, you cannot Special Summon monsters from the Deck or Extra Deck, except Fiend monsters. If a monster leaves the field by your Normal Trap effect, while this card is in your GY, except the turn it was sent there: You can Set this card. You can only use each effect of "Welcome Labrynth" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Beschwöre 1 „Labrynth“-Monster als Spezialbeschwörung von deinem Deck, zusätzlich kannst du bis zum Ende des nächsten Spielzugs, nachdem diese Karte aufgelöst wurde, keine Monster als Spezialbeschwörung vom Deck oder Extra Deck beschwören, außer Unterweltler-Monstern. Falls ein Monster das Spielfeld durch deinen Normalen Falleneffekt verlässt, solange sich diese Karte in deinem Friedhof befindet, außer in dem Spielzug, in dem sie dorthin gelegt wurde: Du kannst diese Karte setzen. Du kannst jeden Effekt von „Willkommens-Labrynth“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Invoca de Modo Especial, desde tu Deck, 1 monstruo "Labrislinto", y además hasta el final del próximo turno después de que esta carta se resuelva no puedes Invocar monstruos de Modo Especial desde el Deck o el Deck Extra, excepto monstruos Demonio. Si un monstruo deja el Campo por efecto de tu Trampa Normal, mientras esta carta esté en tu Cementerio, excepto el turno en el que ésta fue mandada allí: puedes Colocar esta carta. Sólo puedes usar cada efecto de "Bienvenida del Labrislinto" una vez por turno.
+  fr: |-
+    Invoquez Spécialement 1 monstre "Labrynth" depuis votre Deck, et aussi, jusqu'à la fin du prochain tour après la résolution de cette carte, vous ne pouvez pas Invoquer Spécialement de monstres (monstres Démon exclus) depuis le Deck ou Extra Deck. Si un monstre quitte le Terrain par votre effet de Piège Normal, tant que cette carte est dans votre Cimetière, sauf le tour où elle y a été envoyée : vous pouvez Poser cette carte. Vous ne pouvez utiliser chaque effet de "Bienvenue Labrynth" qu'une fois par tour.
+  it: |-
+    Evoca Specialmente 1 mostro "Labrinto" dal tuo Deck, inoltre fino alla fine del prossimo turno dopo che questa carta si è risolta, non puoi Evocare Specialmente mostri dal Deck o Extra Deck, eccetto mostri Demone. Se un mostro lascia il Terreno per l'effetto di una tua Trappola Normale, mentre questa carta è nel tuo Cimitero, eccetto nel turno in cui è stata mandata lì: puoi Posizionare questa carta. Puoi utilizzare ogni effetto di "Benvenuto Labrinto" una sola volta per turno.
+  pt: |-
+    Invoque por Invocação-Especial 1 monstro "Labrinto" do seu Deck e, além disso, até o final do próximo turno depois que este card resolver, você não pode Invocar monstros por Invocação-Especial do Deck ou Deck Adicional, exceto monstros Demônio. Se um monstro deixar o campo pelo efeito de uma Armadilha Normal sua, enquanto este card estiver no seu Cemitério, exceto no turno em que foi enviado para lá: você pode Baixar este card. Você só pode usar cada efeito de "Boas-vindas a Labrinto" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：デッキから「ラビュリンス」モンスター１体を特殊召喚する。このカードの発動後、次のターンの終了時まで自分は悪魔族モンスターしかデッキ・ＥＸデッキから特殊召喚できない。②：このカードが墓地に存在する状態で、自分の通常罠カードの効果でモンスターがフィールドから離れた場合に発動できる。このカードを自分フィールドにセットする。この効果はこのカードが墓地へ送られたターンには発動できない。
   ko: |-
