--- a/data/cards/28373620.yaml
+++ b/data/cards/28373620.yaml
@@ -2,11 +2,11 @@ konami_id: 17385
 password: 28373620
 name:
   en: Geri the Runick Fangs
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Geri die runischen Zähne
+  es: Geri los Colmillos Rúnicos
+  fr: Geri des Crocs Runick
+  it: Geri le Zanne Runick
+  pt: Geri, as Presas Rúnikas
   ja: <ruby>神碑<rt>ルーン</rt></ruby>の<ruby>牙<rt>きば</rt></ruby>ゲーリ
   ja_romaji: Rūn no Kiba Gēri
   ko: 루닉의 이빨 게리
@@ -17,11 +17,21 @@ text:
   en: |-
     2 "Runick" monsters
     Cannot be destroyed by card effects. If this card is Special Summoned from the Extra Deck: You can target 1 non-Quick-Play "Runick" Spell in your GY; add it to your hand. When this card is destroyed by battle: You can target 1 card on the field; destroy it.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    2 „Runisch“-Monster
+    Kann nicht durch Karteneffekte zerstört werden. Falls diese Karte als Spezialbeschwörung vom Extra Deck beschworen wird: Du kannst 1 „Runisch“-Nichtschnell-Zauber in deinem Friedhof wählen; füge ihn deiner Hand hinzu. Wenn diese Karte durch Kampf zerstört wird: Du kannst 1 Karte auf dem Spielfeld wählen; zerstöre sie.
+  es: |-
+    2 monstruos "Rúnico/a"
+    No puede ser destruido por efectos de cartas. Si esta carta es Invocada de Modo Especial desde el Deck Extra: puedes seleccionar 1 Mágica "Rúnico/a" que no sea de Juego Rápido en tu Cementerio; añádela a tu mano. Cuando esta carta es destruida en batalla: puedes seleccionar 1 carta en el Campo; destrúyela.
+  fr: |-
+    2 monstres "Runick"
+    Non destructible par des effets de carte. Si cette carte est Invoquée Spécialement depuis l'Extra Deck : vous pouvez cibler 1 Magie non-Jeu-Rapide "Runick" dans votre Cimetière ; ajoutez-la à votre main. Lorsque cette carte est détruite au combat : vous pouvez cibler 1 carte sur le Terrain ; détruisez-la.
+  it: |-
+    2 mostri "Runick"
+    Non può essere distrutto dagli effetti delle carte. Se questa carta viene Evocata Specialmente dall'Extra Deck: puoi scegliere come bersaglio 1 Magia "Runick" non-Rapida nel tuo Cimitero; aggiungila alla tua mano. Quando questa carta viene distrutta in battaglia: puoi scegliere come bersaglio 1 carta sul Terreno; distruggila.
+  pt: |-
+    2 monstros "Rúnika(o)"
+    Não pode ser destruído por efeitos de card. Se este card for Invocado por Invocação-Especial do Deck Adicional: você pode escolher 1 Magia "Rúnika(o)" que não seja Rápida no seu Cemitério; adicione-a à sua mão. Quando este card for destruído em batalha: você pode escolher 1 card no campo; destrua-o.
   ja: |-
     「神碑」モンスター×２
     ①：このカードがＥＸデッキからの特殊召喚に成功した場合、速攻魔法カード以外の自分の墓地の「神碑」魔法カード１枚を対象として発動できる。そのカードを手札に加える。②：フィールドのこのカードは効果では破壊されない。③：このカードが戦闘で破壊された時、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
