--- a/data/cards/29595202.yaml
+++ b/data/cards/29595202.yaml
@@ -2,11 +2,11 @@ konami_id: 17382
 password: 29595202
 name:
   en: Runick Allure
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Runische Verlockung
+  es: Atractivo Rúnico
+  fr: Attrait Runick
+  it: Fascino Runick
+  pt: Sedução Rúnika
   ja: <ruby>神碑<rt>ルーン</rt></ruby>の<ruby>誑<rt>たぶら</rt></ruby>かし
   ja_romaji: Rūn no Taburakashi
   ko: 루닉의 속임수
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Each time a Quick-Play Spell Card activates: Banish the top card of your opponent's Deck. You can only control 1 "Runick Allure".
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Jedes Mal, wenn eine Schnellzauberkarte aktiviert wird: Verbanne die oberste Karte des Decks deines Gegners. Du kannst nur 1 „Runische Verlockung“ kontrollieren.
+  es: |-
+    Cada vez que es activada una Carta Mágica de Juego Rápido: destierra la carta de la parte superior del Deck de tu adversario. Sólo puedes controlar 1 "Atractivo Rúnico".
+  fr: |-
+    Chaque fois qu'une Carte Magie Jeu-Rapide est activée : bannissez la carte du dessus du Deck de votre adversaire. Vous ne pouvez contrôler qu'1 "Attrait Runick".
+  it: |-
+    Ogni volta che una Carta Magia Rapida viene attivata: bandisci la prima carta del Deck del tuo avversario. Puoi controllare solo 1 "Fascino Runick".
+  pt: |-
+    Sempre que um Card de Magia Rápida ativar: bana o card do topo do Deck do seu oponente. Você só pode controlar 1 "Sedução Rúnika".
   ja: |-
     ①：「神碑の誑かし」は自分フィールドに１枚しか表側表示で存在できない。②：自分または相手が速攻魔法カードを発動する度に発動する。相手のデッキの上からカードを１枚除外する。
   ko: |-
