--- a/data/cards/40680521.yaml
+++ b/data/cards/40680521.yaml
@@ -2,11 +2,11 @@ konami_id: 17355
 password: 40680521
 name:
   en: Mamonaka the Vaylantz United
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Mamonaka die vereinten Vaylantz
+  es: Mamonaka los Vaylantz Unidos
+  fr: Mamonaka l'Union Vaylantz
+  it: Mamonaka i Vaylantz Uniti
+  pt: Mamonaka, os Vaylantz Unidos
   ja: ヴァリアンツの<ruby>聚<rt>しゅう</rt></ruby>－<ruby>幻中<rt>マモナカ</rt></ruby>
   ja_romaji: Variantsu no Shū - Mamonaka
   ko: 밸리언츠의 취－마모나카
@@ -17,11 +17,21 @@ text:
   en: |-
     3 "Vaylantz" monsters
     During the Main Phase (Quick Effect): You can target 1 Effect Monster in your opponent's Main Monster Zone; place that opponent's monster face-up as a Continuous Spell in their Spell & Trap Zone in its same column. (If the zone is occupied, destroy the occupying card, and if it is a Monster Card, your opponent loses LP equal to its ATK). You can only use this effect of "Mamonaka the Vaylantz United" once per turn. If this Special Summoned card you control is destroyed by your opponent's card effect: You can place this card in your Pendulum Zone.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    3 „Vaylantz“-Monster
+    Während der Main Phase (Schnelleffekt): Du kannst 1 Effektmonster in der Main-Monsterzone deines Gegners wählen; lege jenes Monster des Gegners als Permanenten Zauber offen in seine Zauber- & Fallenzone in seine eigene Spalte. (Falls die Zone belegt ist, zerstöre die sie belegende Karte und falls es eine Monsterkarte ist, verliert dein Gegner LP in Höhe ihrer ATK.) Du kannst diesen Effekt von „Mamonaka die vereinten Vaylantz“ nur einmal pro Spielzug verwenden. Falls diese als Spezialbeschwörung beschworene Karte, die du kontrollierst, durch einen Karteneffekt deines Gegners zerstört wird: Du kannst diese Karte in deine Pendelzone legen.
+  es: |-
+    3 monstruos "Vaylantz"
+    Durante la Main Phase (Efecto Rápido): puedes seleccionar 1 Monstruo de Efecto en la Zona de Monstruos Principal de tu adversario; pon ese monstruo del adversario como una Mágica Continua boca arriba en su Zona de Magia y Trampas en su misma columna. (Si la zona está ocupada, destruye la carta ocupante y, si es una Carta de Monstruo, tu adversario pierde LP iguales a su ATK). Sólo puedes usar este efecto de "Mamonaka los Vaylantz Unidos" una vez por turno. Si esta carta Invocada de Modo Especial que tú controlas es destruida por el efecto de una carta de tu adversario: puedes poner esta carta en tu Zona de Péndulo.
+  fr: |-
+    3 monstres "Vaylantz"
+    Durant la Main Phase (Effet Rapide) : vous pouvez cibler 1 Monstre à Effet dans la Zone Monstre Main de votre adversaire ; placez face recto le monstre de l'adversaire comme Magie Continue dans sa Zone Magie & Piège dans sa même colonne. (Si la zone est occupée, détruisez la carte qui l'occupe, et si c'est une Carte Monstre, votre adversaire perd des LP égaux à son ATK.) Vous ne pouvez utiliser cet effet de "Mamonaka l'Union Vaylantz" qu'une fois par tour. Si cette carte Invoquée Spécialement que vous contrôlez est détruite par un effet de carte de votre adversaire : vous pouvez placer cette carte dans votre Zone Pendule.
+  it: |-
+    3 mostri "Vaylantz"
+    Durante la Main Phase (Effetto Rapido): puoi scegliere come bersaglio 1 Mostro con Effetto nella Zona Mostri Main del tuo avversario; metti quel mostro dell'avversario scoperto come una Magia Continua nella sua Zona Magie & Trappole nella sua stessa colonna. (Se la zona è occupata, distruggi la carta che la occupa e, se è una Carta Mostro, il tuo avversario perde LP pari al suo ATK). Puoi utilizzare questo effetto di "Mamonaka i Vaylantz Uniti" una sola volta per turno. Se questa carta Evocata Specialmente che controlli viene distrutta dall'effetto di una carta del tuo avversario: puoi mettere questa carta nella tua Zona Pendulum.
+  pt: |-
+    3 monstros "Vaylantz"
+    Durante a Fase Principal (Efeito Rápido): você pode escolher 1 Monstro de Efeito na Zona de Monstros Principal do seu oponente; coloque esse monstro do oponente com a face para cima como uma Magia Contínua na Zona de Magias & Armadilhas dele em sua mesma coluna. (Se a zona estiver ocupada, destrua o card que a estiver ocupando e, se for um Card de Monstro, seu oponente perde PV igual ao seu ATK). Você só pode usar este efeito de "Mamonaka, os Vaylantz Unidos" uma vez por turno. Se este card Invocado por Invocação-Especial que você controla for destruído por um efeito de card do seu oponente: você pode colocar este card na sua Zona de Pêndulo.
   ja: |-
     「ヴァリアンツ」モンスター×３
     このカード名の①のモンスター効果は１ターンに１度しか使用できない。①：お互いのメインフェイズに、相手のメインモンスターゾーンの効果モンスター１体を対象として発動できる。その相手モンスターをそれと同じ縦列の相手の魔法＆罠ゾーンに永続魔法カード扱いとして表側表示で置く（置く先にあるカードは破壊され、それがモンスターカードの場合、相手はその攻撃力分のＬＰを失う）。②：特殊召喚したこのカードが相手の効果で破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
@@ -45,11 +55,31 @@ pendulum_effect:
     ● Special Summon this card to your Main Monster Zone in its same column.
     ● Move 1 monster in your Main Monster Zone to an adjacent (horizontal) Monster Zone.
     You can only use this effect of "Mamonaka the Vaylantz United" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst 1 dieser Effekte aktivieren;
+    ● Beschwöre diese Karte als Spezialbeschwörung in deine Main-Monsterzone in ihre eigene Spalte.
+    ● Bewege 1 Monster in deiner Main-Monsterzone in eine (waagerecht) benachbarte Monsterzone.
+    Du kannst diesen Effekt von „Mamonaka die vereinten Vaylantz“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes activar 1 de estos efectos;
+    ● Invoca esta carta de Modo Especial a tu Zona de Monstruos Principal en su misma columna.
+    ● Mueve 1 monstruo en tu Zona de Monstruos Principal a una Zona de Monstruos adyacente (horizontal).
+    Sólo puedes usar este efecto de "Mamonaka los Vaylantz Unidos" una vez por turno.
+  fr: |-
+    Vous pouvez activer 1 de ces effets ;
+    ● Invoquez Spécialement cette carte dans votre Zone Monstre Main dans sa même colonne.
+    ● Déplacez 1 monstre dans votre Zone Monstre Main dans une Zone Monstre (horizontale) adjacente.
+    Vous ne pouvez utiliser cet effet de "Mamonaka l'Union Vaylantz" qu'une fois par tour.
+  it: |-
+    Puoi attivare 1 di questi effetti;
+    ● Evoca Specialmente questa carta nella tua Zona Mostri Main nella sua stessa colonna.
+    ● Sposta 1 mostro nella tua Zona Mostri Main in una Zona Mostri adiacente (orizzontalmente).
+    Puoi utilizzare questo effetto di "Mamonaka i Vaylantz Uniti" una sola volta per turno.
+  pt: |-
+    Você pode ativar 1 desses efeitos;
+    ● Invoque este card por Invocação-Especial na sua Zona de Monstros Principal em sua mesma coluna.
+    ● Mova 1 monstro na sua Zona de Monstros Principal para uma Zona de Monstros adjacente (horizontal).
+    Você só pode usar este efeito de "Mamonaka, os Vaylantz Unidos" uma vez por turno.
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：以下の効果から１つを選択して発動できる。●このカードを正面の自分のメインモンスターゾーンに特殊召喚する。●自分のメインモンスターゾーンのモンスター１体を選び、その位置をその隣のモンスターゾーンに移動する。
   ko: |-
