--- a/data/cards/41802073.yaml
+++ b/data/cards/41802073.yaml
@@ -2,11 +2,11 @@ konami_id: 17352
 password: 41802073
 name:
   en: Vaylantz Voltage Viscount
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vaylantz-Spannungsvicomte
+  es: Vizconde Voltaje Vaylantz
+  fr: Vicomte de la Tension Vaylantz
+  it: Visconte Voltaggio Vaylantz
+  pt: Visconde Voltagem Vaylantz
   ja: ヴァリアンツ<ruby>Ｖ<rt>ヴォルテージ</rt></ruby>－ヴァイカント
   ja_romaji: Variantsu Vorutēji - Vaikaunto
   ko: 밸리언츠<ruby>V<rt>볼티지</rt></ruby>－바이칸트
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     During your Main Phase, if you control this Special Summoned card: You can place 1 face-up "Vaylantz" Pendulum Monster from your Extra Deck, face-up in your Spell & Trap Zone as a Continuous Spell. If this card in the Monster Zone moves to another Monster Zone: You can place 1 face-up "Vaylantz" Pendulum Monster from your Extra Deck in your Pendulum Zone. You can only use each effect of "Vaylantz Voltage Viscount" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während deiner Main Phase, falls du diese als Spezialbeschwörung beschworene Karte kontrollierst: Du kannst 1 offenes „Vaylantz“-Pendelmonster von deinem Extra Deck offen als Permanenten Zauber in deine Zauber- & Fallenzone legen. Falls diese Karte in der Monsterzone in eine andere Monsterzone bewegt wird: Du kannst 1 offenes „Vaylantz“-Pendelmonster von deinem Extra Deck in deine Pendelzone legen. Du kannst jeden Effekt von „Vaylantz-Spannungsvicomte“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Durante tu Main Phase, si controlas esta carta Invocada de Modo Especial: puedes poner 1 Monstruo de Péndulo "Vaylantz" boca arriba en tu Deck Extra en tu Zona de Magia y Trampas como una Mágica Continua boca arriba. Si esta carta en la Zona de Monstruos se mueve a otra Zona de Monstruos: puedes poner 1 Monstruo de Péndulo "Vaylantz" boca arriba en tu Deck Extra en tu Zona de Péndulo. Sólo puedes usar cada efecto de "Vizconde Voltaje Vaylantz" una vez por turno.
+  fr: |-
+    Durant votre Main Phase, si vous contrôlez cette carte Invoquée Spécialement : vous pouvez placer 1 Monstre Pendule "Vaylantz" face recto depuis votre Extra Deck, face recto dans votre Zone Magie & Piège comme Magie Continue. Si cette carte dans la Zone Monstre est déplacée dans une autre Zone Monstre : vous pouvez placer 1 Monstre Pendule "Vaylantz" face recto depuis votre Extra Deck dans votre Zone Pendule. Vous ne pouvez utiliser chaque effet de "Vicomte de la Tension Vaylantz" qu'une fois par tour.
+  it: |-
+    Durante la tua Main Phase, se controlli questa carta Evocata Specialmente: puoi mettere 1 Mostro Pendulum "Vaylantz" scoperto dal tuo Extra Deck, scoperto nella tua Zona Magie & Trappole come una Magia Continua. Se questa carta nella Zona Mostri si sposta in un'altra Zona Mostri: puoi mettere 1 Mostro Pendulum "Vaylantz" scoperto dal tuo Extra Deck nella tua Zona Pendulum. Puoi utilizzare ogni effetto di "Visconte Voltaggio Vaylantz" una sola volta per turno.
+  pt: |-
+    Durante sua Fase Principal, se você controlar este card Invocado por Invocação-Especial: você pode colocar 1 Monstro Pêndulo "Vaylantz" com a face para cima do seu Deck Adicional, com a face para cima na sua Zona de Magias & Armadilhas como uma Magia Contínua. Se este card na Zona de Monstros se mover para outra Zona de Monstros: você pode colocar 1 Monstro Pêndulo "Vaylantz" com a face para cima do seu Deck Adicional na sua Zona de Pêndulo. Você só pode usar cada efeito de "Visconde Voltagem Vaylantz" uma vez por turno.
   ja: |-
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚されている場合、自分メインフェイズに発動できる。自分のＥＸデッキから表側表示の「ヴァリアンツ」Ｐモンスター１体を選んで自分の魔法＆罠ゾーンに永続魔法カード扱いとして表側表示で置く。②：モンスターゾーンのこのカードが他のモンスターゾーンに移動した場合に発動できる。自分のＥＸデッキから表側表示の「ヴァリアンツ」Ｐモンスター１体を選んで自分のＰゾーンに置く。
   ko: |-
@@ -38,11 +43,16 @@ pendulum_scale: 1
 pendulum_effect:
   en: |-
     During your Main Phase: You can Special Summon this card to your Main Monster Zone in its same column, also you cannot Special Summon non-"Vaylantz" monsters for the rest of this turn, except from the Extra Deck. You can only use this effect of "Vaylantz Voltage Viscount" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während deiner Main Phase: Du kannst diese Karte als Spezialbeschwörung in deine Main-Monsterzone in ihre eigene Spalte beschwören, zusätzlich kannst du für den Rest dieses Spielzugs keine Nicht-„Vaylantz“-Monster als Spezialbeschwörung beschwören, außer vom Extra Deck. Du kannst diesen Effekt von „Vaylantz-Spannungsvicomte“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Durante tu Main Phase: puedes Invocar esta carta de Modo Especial a tu Zona de Monstruos Principal en su misma columna, y además por el resto de este turno no puedes Invocar de Modo Especial monstruos que no sean "Vaylantz", excepto desde el Deck Extra. Sólo puedes usar este efecto de "Vizconde Voltaje Vaylantz" una vez por turno.
+  fr: |-
+    Durant votre Main Phase : vous pouvez Invoquer Spécialement cette carte dans votre Zone Monstre Main dans sa même colonne, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres non-"Vaylantz" le reste de ce tour, sauf depuis l'Extra Deck. Vous ne pouvez utiliser cet effet de "Vicomte de la Tension Vaylantz" qu'une fois par tour.
+  it: |-
+    Durante la tua Main Phase: puoi Evocare Specialmente questa carta nella tua Zona Mostri Main nella sua stessa colonna, inoltre non puoi Evocare Specialmente mostri non-"Vaylantz" per il resto di questo turno, eccetto dall'Extra Deck. Puoi utilizzare questo effetto di "Visconte Voltaggio Vaylantz" una sola volta per turno.
+  pt: |-
+    Durante sua Fase Principal: você pode Invocar este card por Invocação-Especial na sua Zona de Monstros Principal em sua mesma coluna e, além disso, você não pode Invocar por Invocação-Especial monstros que não sejam "Vaylantz" pelo resto deste turno, exceto do Deck Adicional. Você só pode usar este efeito de "Visconde Voltagem Vaylantz" uma vez por turno.
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。このカードを正面の自分のメインモンスターゾーンに特殊召喚する。この効果の発動後、ターン終了時まで自分は「ヴァリアンツ」モンスターしか特殊召喚できない（ＥＸデッキからの特殊召喚は除く）。
   ko: |-
