--- a/data/cards/49568943.yaml
+++ b/data/cards/49568943.yaml
@@ -2,11 +2,11 @@ konami_id: 17358
 password: 49568943
 name:
   en: Vaylantz World - Shinra Bansho
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vaylantz-Welt - Shinra Bansho
+  es: Mundo Vaylantz - Shinra Bansho
+  fr: Monde Vaylantz - Shinra Bansho
+  it: Mondo Vaylantz - Shinra Bansho
+  pt: Mundo Vaylantz - Shinra Bansho
   ja: <ruby>ＶＶ<rt>ヴァリアンツ＝ワールド</rt></ruby>－<ruby>真<rt>しん</rt></ruby><ruby>羅<rt>ら</rt></ruby><ruby>万<rt>ばん</rt></ruby><ruby>象<rt>しょう</rt></ruby>
   ja_romaji: Variantsu=Wārudo - Shinrabanshō
   ko: <ruby>VV<rt>밸리언츠＝월드</rt></ruby>－진라만상
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When this card is activated: Place 1 "Vaylantz" Field Spell from your Deck face-up in your opponent's Field Zone, except "Vaylantz World - Shinra Bansho". If there are 2 cards in the Field Zones: The turn player can target 1 Monster Card in their own Spell & Trap Zone; they Special Summon that card to their own Main Monster Zone in its same column. The turn player can only use this effect of "Vaylantz World - Shinra Bansho" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn diese Karte aktiviert wird: Lege 1 „Vaylantz“-Spielfeldzauber von deinem Deck offen in die Spielfeldzone deines Gegners, außer „Vaylantz-Welt - Shinra Bansho“. Falls 2 Karten in den Spielfeldzonen liegen: Der Zugspieler kann 1 Monsterkarte in seiner Zauber- & Fallenzone wählen; er beschwört jene Karte als Spezialbeschwörung in seine Main-Monsterzone in ihre eigene Spalte. Der Zugspieler kann diesen Effekt von „Vaylantz-Welt - Shinra Bansho“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Cuando esta carta es activada: pon 1 Mágica de Campo "Vaylantz" en tu Deck en la Zona del Campo de tu adversario boca arriba, excepto "Mundo Vaylantz - Shinra Bansho". Si hay 2 cartas en las Zonas del Campo: el jugador en turno puede seleccionar 1 Carta de Monstruo en su propia Zona de Magia y Trampas; éste Invoca esa carta de Modo Especial a su propia Zona de Monstruos Principal en su misma columna. El jugador en turno sólo puede usar este efecto de "Mundo Vaylantz - Shinra Bansho" una vez por turno.
+  fr: |-
+    Lorsque cette carte est activée : placez face recto 1 Magie de Terrain "Vaylantz" ("Monde Vaylantz - Shinra Bansho" exclu) depuis votre Deck dans la Zone Terrain de votre adversaire. S'il y a 2 cartes dans les Zones Terrain : le joueur du tour peut cibler 1 Carte Monstre dans sa propre Zone Magie & Piège ; il Invoque Spécialement la carte dans sa Zone Monstre Main dans sa même colonne. Le joueur du tour ne peut utiliser cet effet de "Monde Vaylantz - Shinra Bansho" qu'une fois par tour.
+  it: |-
+    Quando questa carta viene attivata: metti 1 Magia Terreno "Vaylantz" dal tuo Deck scoperta nella Zona Terreno del tuo avversario, eccetto "Mondo Vaylantz - Shinra Bansho". Se ci sono 2 carte nelle Zone Terreno: il giocatore di turno può scegliere come bersaglio 1 Carta Mostro nella sua stessa Zona Magie & Trappole; lui Evoca Specialmente quella carta nella sua stessa Zona Mostri Main nella sua stessa colonna. Il giocatore di turno può utilizzare questo effetto di "Mondo Vaylantz - Shinra Bansho" una sola volta per turno.
+  pt: |-
+    Quando este card for ativado: coloque 1 Magia de Campo "Vaylantz" do seu Deck com a face para cima na Zona do Campo do seu oponente, exceto "Mundo Vaylantz - Shinra Bansho". Se houver 2 cards nas Zonas do Campo: o duelista do turno pode escolher 1 Card de Monstro na sua própria Zona de Magias & Armadilhas; ele Invoca esse card por Invocação-Especial na sua própria Zona de Monstros Principal em sua mesma coluna. O duelista do turno só pode usar este efeito de "Mundo Vaylantz - Shinra Bansho" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードの発動時の効果処理として、デッキから「ＶＶ－真羅万象」以外の「ヴァリアンツ」フィールド魔法カード１枚を相手のフィールドゾーンに表側表示で置く。②：フィールドゾーンにカードが２枚ある場合、ターンプレイヤーは自身の魔法＆罠ゾーンのモンスターカード１枚を対象として発動できる。そのカードをその正面の自身のメインモンスターゾーンに特殊召喚する。
   ko: |-
