--- a/data/cards/55990317.yaml
+++ b/data/cards/55990317.yaml
@@ -2,11 +2,11 @@ konami_id: 17383
 password: 55990317
 name:
   en: Hugin the Runick Wings
-  de:
+  de: Hugin die runischen Schwingen
   es: Hugin las Alas Rúnicas
-  fr:
-  it:
-  pt:
+  fr: Hugin des Ailes Runick
+  it: Hugin le Ali Runick
+  pt: Hugin, as Asas Rúnikas
   ja: <ruby>神碑<rt>ルーン</rt></ruby>の<ruby>翼<rt>つばさ</rt></ruby>フギン
   ja_romaji: Rūn no Tsubasa Fugin
   ko: 루닉의 날개 후긴
@@ -17,11 +17,21 @@ text:
   en: |-
     2 "Runick" monsters
     If this card is Special Summoned from the Extra Deck: You can discard 1 card; add 1 "Runick" Field Spell from your Deck to your hand. If another card(s) you control would be destroyed by card effect, you can banish this card you control instead. If this card on the field is destroyed by battle or card effect: Return this card to the Extra Deck.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    2 „Runisch“-Monster
+    Falls diese Karte als Spezialbeschwörung vom Extra Deck beschworen wird: Du kannst 1 Karte abwerfen; füge deiner Hand 1 „Runisch“-Spielfeldzauber von deinem Deck hinzu. Falls eine oder mehr andere Karten, die du kontrollierst, durch einen Karteneffekt zerstört würden, kannst du stattdessen diese Karte verbannen, die du kontrollierst. Falls diese Karte auf dem Spielfeld durch Kampf oder einen Karteneffekt zerstört wird: Lege diese Karte ins Extra Deck zurück.
+  es: |-
+    2 monstruos "Rúnico/a"
+    Si esta carta es Invocada de Modo Especial desde el Deck Extra: puedes descartar 1 carta; añade a tu mano 1 Mágica de Campo "Rúnico/a" en tu Deck. Si otra u otras cartas que controlas fueran a ser destruidas por el efecto de una carta, puedes desterrar esta carta que controlas en su lugar. Si esta carta en el Campo es destruida en batalla o por el efecto de una carta: devuelve esta carta al Deck Extra.
+  fr: |-
+    2 monstres "Runick"
+    Si cette carte est Invoquée Spécialement depuis l'Extra Deck : vous pouvez défausser 1 carte ; ajoutez 1 Magie de Terrain "Runick" depuis votre Deck à votre main. Si une ou plusieurs autres cartes que vous contrôlez vont être détruites par un effet de carte, vous pouvez bannir cette carte que vous contrôlez à la place. Si cette carte sur le Terrain est détruite au combat ou par un effet de carte : renvoyez cette carte à l'Extra Deck.
+  it: |-
+    2 mostri "Runick"
+    Se questa carta viene Evocata Specialmente dall'Extra Deck: puoi scartare 1 carta; aggiungi 1 Magia Terreno "Runick" dal tuo Deck alla tua mano. Se una o più altre carte che controlli stanno per essere distrutte dall'effetto di una carta, puoi invece bandire questa carta che controlli. Se questa carta sul Terreno viene distrutta in battaglia o dall'effetto di una carta: fai ritornare questa carta nell'Extra Deck.
+  pt: |-
+    2 monstros "Rúnika(o)"
+    Se este card for Invocado por Invocação-Especial do Deck Adicional: você pode descartar 1 card; adicione 1 Magia de Campo "Rúnika(o)" do seu Deck à sua mão. Se um ou mais outros cards que você controla seriam destruídos por um efeito de card, em vez disso, você pode banir este card que você controla. Se este card no campo for destruído em batalha ou por um efeito de card: devolva este card para o Deck Adicional.
   ja: |-
     「神碑」モンスター×２
     ①：このカードがＥＸデッキからの特殊召喚に成功した場合、手札を１枚捨てて発動できる。デッキから「神碑」フィールド魔法カード１枚を手札に加える。②：このカード以外の自分フィールドのカードが効果で破壊される場合、代わりにフィールドのこのカードを除外できる。③：フィールドのこのカードが戦闘・効果で破壊された場合に発動する。このカードを持ち主のＥＸデッキに戻す。
