--- a/data/cards/69895264.yaml
+++ b/data/cards/69895264.yaml
@@ -2,11 +2,11 @@ konami_id: 17368
 password: 69895264
 name:
   en: Labrynth Set-Up
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Labrynth-Vorbereitung
+  es: Preparación del Labrislinto
+  fr: Traquenard Labrynth
+  it: Preparazione Labrinto
+  pt: Preparação de Labrinto
   ja: ラビュリンス・セッティング
   ja_romaji: Rabyurinsu Settingu
   ko: 라뷰린스 세팅
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Target 2 of your "Labrynth" Spells/Traps that are banished or in your GY, except "Labrynth Set-Up"; shuffle them into the Deck, then if you control a Fiend monster, you can Set non-"Labrynth" Normal Traps with different names directly from your Deck equal to the number shuffled. You can only activate 1 "Labrynth Set-Up" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wähle 2 deiner „Labrynth“-Zauber/Fallen, die verbannt sind oder in deinem Friedhof liegen, außer „Labrynth-Vorbereitung“; mische sie ins Deck, dann, falls du ein Unterweltler-Monster kontrollierst, kannst du Normale Nicht-„Labrynth“-Fallen mit unterschiedlichen Namen in Höhe der gemischten Anzahl direkt von deinem Deck setzen. Du kannst nur 1 „Labrynth-Vorbereitung“ pro Spielzug aktivieren.
+  es: |-
+    Selecciona 2 de tus Mágicas/Trampas "Labrislinto" que estén desterradas o en tu Cementerio, excepto "Preparación del Labrislinto"; barájalas al Deck y después, si controlas un monstruo Demonio, puedes Colocar directamente desde tu Deck un número de Trampas Normales que no sean "Labrislinto" con nombres diferentes igual al número barajado. Sólo puedes activar 1 "Preparación del Labrislinto" por turno.
+  fr: |-
+    Ciblez 2 de vos Magies/Pièges "Labrynth" ("Traquenard Labrynth" exclu) qui sont bannis ou dans votre Cimetière ; mélangez-les dans le Deck, puis si vous contrôlez un monstre Démon, vous pouvez Poser un nombre de Pièges Normaux non-"Labrynth" de noms différents directement depuis votre Deck, égal au nombre mélangé. Vous ne pouvez activer qu'1 "Traquenard Labrynth" par tour.
+  it: |-
+    Scegli come bersaglio 2 delle tue Magie/Trappole "Labrinto" che sono bandite o nel tuo Cimitero, eccetto "Preparazione Labrinto"; mischiale nel Deck, poi se controlli un mostro Demone, puoi Posizionare Trappole Normali non-"Labrinto" con nomi diversi direttamente dal tuo Deck pari al numero mischiato. Puoi attivare solo 1 "Preparazione Labrinto" per turno.
+  pt: |-
+    Escolha 2 das suas Magias/Armadilhas "Labrinto" que estiverem banidas ou no seu Cemitério, exceto "Preparação de Labrinto"; embaralhe-as no Deck e, depois, se você controlar um monstro Demônio, você pode Baixar Armadilhas Normais que não sejam "Labrinto" com nomes diferentes diretamente do seu Deck igual ao número embaralhado. Você só pode ativar 1 "Preparação de Labrinto" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分の墓地のカード及び除外されている自分のカードの中から、「ラビュリンス・セッティング」以外の「ラビュリンス」魔法・罠カード２枚を対象として発動できる。そのカードをデッキに戻す。さらに、自分フィールドに悪魔族モンスターが存在する場合、戻した数だけデッキから「ラビュリンス」カード以外の通常罠カードを選んで自分フィールドにセットできる（同名カードは１枚まで）。
   ko: |-
