--- a/data/cards/92107604.yaml
+++ b/data/cards/92107604.yaml
@@ -2,11 +2,11 @@ konami_id: 17381
 password: 92107604
 name:
   en: Runick Fountain
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Runischer Brunnen
+  es: Fuente Rúnica
+  fr: Fontaine Runick
+  it: Fontana Runick
+  pt: Fonte Rúnika
   ja: <ruby>神碑<rt>ルーン</rt></ruby>の<ruby>泉<rt>いずみ</rt></ruby>
   ja_romaji: Rūn no Izumi
   ko: 루닉의 샘
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can activate "Runick" Quick-Play Spell Cards from your hand during your opponent's turn. Once per turn, if you activate a "Runick" Quick-Play Spell Card: You can target up to 3 "Runick" Quick-Play Spells in your GY; place them on the bottom of your Deck in any order, then draw the same number of cards.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst „Runisch“-Schnellzauberkarten während des Spielzugs deines Gegners von deiner Hand aktivieren. Einmal pro Spielzug, falls du eine „Runisch“-Schnellzauberkarte aktivierst: Du kannst bis zu 3 „Runisch“-Schnellzauber in deinem Friedhof wählen; lege sie in beliebiger Reihenfolge unter dein Deck, dann ziehe dieselbe Anzahl Karten.
+  es: |-
+    Puedes activar Cartas Mágicas de Juego Rápido "Rúnico/a" desde tu mano durante el turno de tu adversario. Una vez por turno, si activas una Carta Mágica de Juego Rápido "Rúnico/a": puedes seleccionar hasta 3 Mágicas de Juego Rápido "Rúnico/a" en tu Cementerio; ponlas en la parte inferior de tu Deck en cualquier orden, y después roba el mismo número de cartas.
+  fr: |-
+    Vous pouvez activer des Cartes Magie Jeu-Rapide "Runick" depuis votre main durant le tour de votre adversaire. Une fois par tour, si vous activez une Carte Magie Jeu-Rapide "Runick" : vous pouvez cibler max. 3 Magies Jeu-Rapide "Runick" dans votre Cimetière ; placez-les au-dessous de votre Deck dans l'ordre de votre choix, puis piochez le même nombre de cartes.
+  it: |-
+    Puoi attivare le Carte Magia Rapida "Runick" dalla tua mano durante il turno del tuo avversario. Una volta per turno, se attivi una Carta Magia Rapida "Runick": puoi scegliere come bersaglio fino a 3 Magie Rapide "Runick" nel tuo Cimitero; mettile in fondo al tuo Deck in qualsiasi ordine, poi pesca lo stesso numero di carte.
+  pt: |-
+    Você pode ativar Cards de Magia Rápida "Rúnika(o)" da sua mão durante o turno do seu oponente. Uma vez por turno, se você ativar um Card de Magia Rápida "Rúnika(o)": você pode escolher até 3 Magias Rápidas "Rúnika(o)" no seu Cemitério; coloque-as no fundo do seu Deck em qualquer ordem e, depois, compre o mesmo número de cards.
   ja: |-
     ①：このカードがフィールドゾーンに存在する限り、自分は相手ターンに「神碑」速攻魔法カードを手札から発動できる。②：１ターンに１度、自分が「神碑」速攻魔法カードを発動した場合、自分の墓地の「神碑」速攻魔法カードを３枚まで対象として発動できる。そのカードを好きな順番でデッキの下に戻す。その後、戻した数だけ自分はデッキからドローする。
   ko: |-
