--- a/data/cards/02347656.yaml
+++ b/data/cards/02347656.yaml
@@ -2,11 +2,11 @@ konami_id: 17360
 password: 2347656
 name:
   en: Lovely Labrynth of the Silver Castle
-  de:
+  de: Liebliches Labrynth von der Silberburg
   es: Precioso Labrislinto del Castillo Plateado
-  fr:
-  it:
-  pt:
+  fr: Adorable Labrynth du Château d'Argent
+  it: Incantevole Labrinto del Castello d'Argento
+  pt: Fascinante Labrinto do Castelo Prateado
   ja: <ruby>白<rt>しろ</rt></ruby><ruby>銀<rt>がね</rt></ruby>の<ruby>城<rt>しろ</rt></ruby>のラビュリンス
   ja_romaji: Shirogane no Shiro no Rabyurinsu
   ko: 백은 성의 라뷰린스
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Your opponent cannot activate monster effects in response to the activation of your Normal Trap Cards. You can only use each of the following effects of "Lovely Labrynth of the Silver Castle" once per turn. You can target 1 Normal Trap in your GY; Set it to your field, but it cannot be activated unless you control a Fiend monster. If another monster(s) leaves the field by your Normal Trap effect (except during the Damage Step): You can destroy 1 card in your opponent's hand (at random) or their field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Dein Gegner kann als Reaktion auf die Aktivierung deiner Normalen Fallenkarten keine Monstereffekte aktivieren. Du kannst jeden der folgenden Effekte von „Liebliches Labrynth von der Silberburg“ nur einmal pro Spielzug verwenden. Du kannst 1 Normale Falle in deinem Friedhof wählen; setze sie auf deine Spielfeldseite, aber sie kann nicht aktiviert werden, es sei denn, du kontrollierst ein Unterweltler-Monster. Falls ein oder mehr andere Monster das Spielfeld durch deinen Normalen Falleneffekt verlassen (außer während des Damage Steps): Du kannst 1 Karte in der Hand deines Gegners (zufällig bestimmt) oder auf seiner Spielfeldseite zerstören.
+  es: |-
+    Tu adversario no puede activar efectos de monstruos en respuesta a la activación de tus Cartas de Trampa Normales. Sólo puedes usar cada uno de los siguientes efectos de "Precioso Labrislinto del Castillo Plateado" una vez por turno. Puedes seleccionar 1 Trampa Normal en tu Cementerio; Colócala en tu Campo, pero ésta no puede ser activada a menos que controles un monstruo Demonio. Si otro u otros monstruos dejan el Campo por efecto de tu Trampa Normal (excepto durante el Damage Step): puedes destruir 1 carta en la mano (al azar) o Campo de tu adversario.
+  fr: |-
+    Votre adversaire ne peut pas activer d'effets de monstre en réponse à l'activation de vos Cartes Piège Normal. Vous ne pouvez utiliser chacun des effets suivants de "Adorable Labrynth du Château d'Argent" qu'une fois par tour. Vous pouvez cibler 1 Piège Normal dans votre Cimetière ; Posez-le sur votre Terrain, mais il ne peut pas être activé sauf si vous contrôlez un monstre Démon. Si un ou plusieurs autres monstres quittent le Terrain par votre effet de Piège Normal (sauf durant la Damage Step) : vous pouvez détruire 1 carte dans la main de votre adversaire (au hasard) ou sur son Terrain.
+  it: |-
+    Il tuo avversario non può attivare effetti di mostri in risposta all'attivazione delle tue Carte Trappola Normali. Puoi utilizzare ognuno dei seguenti effetti di "Incantevole Labrinto del Castello d'Argento" una sola volta per turno. Puoi scegliere come bersaglio 1 Trappola Normale nel tuo Cimitero; Posizionala sul tuo Terreno, ma essa non può essere attivata a meno che tu controlli un mostro Demone. Se uno o più altri mostri lasciano il Terreno per l'effetto di una tua Trappola Normale (eccetto durante il Damage Step): puoi distruggere 1 carta (a caso) nella mano del tuo avversario o sul suo Terreno.
+  pt: |-
+    Seu oponente não pode ativar efeitos de monstro em resposta à ativação dos seus Cards de Armadilha Normal. Você só pode usar cada um dos seguintes efeitos de "Fascinante Labrinto do Castelo Prateado" uma vez por turno. Você pode escolher 1 Armadilha Normal no seu Cemitério; Baixe-a no seu campo, mas ela não pode ser ativada a não ser que você controle um monstro Demônio. Se um ou mais outros monstros deixarem o campo pelo efeito de uma Armadilha Normal sua (exceto durante a Etapa de Dano): você pode destruir 1 card na mão do seu oponente (aleatório) ou no campo dele.
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分の通常罠カードの発動に対して、相手はモンスターの効果を発動できない。②：自分の墓地の通常罠カード１枚を対象として発動できる。そのカードを自分フィールドにセットする。この効果でセットしたカードは、自分フィールドに悪魔族モンスターが存在しない場合には発動できない。③：自分の通常罠カードの効果でモンスターがフィールドから離れた場合に発動できる。相手の手札・フィールドのカード１枚を選んで破壊する（手札からはランダムに選ぶ）。
   ko: |-
