--- a/data/cards/13179234.yaml
+++ b/data/cards/13179234.yaml
@@ -2,11 +2,11 @@ konami_id: 17357
 password: 13179234
 name:
   en: Vaylantz Wars - The Place of Beginning
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vaylantz-Kriege - Der Ort des Anfangs
+  es: Las Guerras Vaylantz - El Lugar del Comienzo
+  fr: Guerres Vaylantz - L'Endroit du Commencement
+  it: Guerre Vaylantz - Il Posto dell'Inizio
+  pt: Guerras Vaylantz - O Local do Começo
   ja: <ruby>ＶＶ<rt>ヴァリアンツ＝ウォー</rt></ruby>～<ruby>始<rt>はじ</rt></ruby>まりの<ruby>地<rt>ち</rt></ruby>～
   ja_romaji: Variantsu=Wō ~ Hajimari no Chi ~
   ko: <ruby>VV<rt>밸리언츠＝워</rt></ruby>~시작의 땅~
@@ -18,11 +18,26 @@ text:
     Add 1 "Vaylantz" Field Spell from your Deck to your hand, then you can apply the following effect.
     ● Destroy 1 Pendulum Monster Card you control, and if you do, add 1 "Senet Switch" from your Deck to your hand.
     If this card is in your GY, except the turn it was sent there: You can banish this card; place 1 face-up "Vaylantz" Pendulum Monster from your Extra Deck in your Pendulum Zone. You can only use each effect of "Vaylantz Wars - The Place of Beginning" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Füge deiner Hand 1 „Vaylantz“-Spielfeldzauber von deinem Deck hinzu, dann kannst du den folgenden Effekt ausführen.
+    ● Zerstöre 1 Pendelmonsterkarte, die du kontrollierst, und falls du dies tust, füge deiner Hand 1 „Senet-Schalter“ von deinem Deck hinzu.
+    Falls sich diese Karte in deinem Friedhof befindet, außer in dem Spielzug, in dem sie dorthin gelegt wurde: Du kannst diese Karte verbannen; lege 1 offenes „Vaylantz“-Pendelmonster von deinem Extra Deck in deine Pendelzone. Du kannst jeden Effekt von „Vaylantz-Kriege - Der Ort des Anfangs“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Añade a tu mano 1 Mágica de Campo "Vaylantz" en tu Deck, y después puedes aplicar el siguiente efecto.
+    ● Destruye 1 Carta de Monstruo de Péndulo que controles y, si lo haces, añade a tu mano 1 "Interruptor de Senet" en tu Deck.
+    Si esta carta está en tu Cementerio, excepto en el turno en el que ésta fue mandada allí: puedes desterrar esta carta; pon en tu Zona de Péndulo 1 Monstruo de Péndulo "Vaylantz" boca arriba en tu Deck Extra. Sólo puedes usar cada efecto de "Las Guerras Vaylantz - El Lugar del Comienzo" una vez por turno.
+  fr: |-
+    Ajoutez 1 Magie de Terrain "Vaylantz" depuis votre Deck à votre main, puis vous pouvez appliquer l'effet suivant.
+    ● Détruisez 1 Carte Monstre Pendule que vous contrôlez, et si vous le faites, ajoutez 1 "Commutateur Senet" depuis votre Deck à votre main.
+    Si cette carte est dans votre Cimetière, sauf le tour où elle y a été envoyée : vous pouvez bannir cette carte ; placez 1 Monstre Pendule "Vaylantz" face recto depuis votre Extra Deck dans votre Zone Pendule. Vous ne pouvez utiliser chaque effet de "Guerres Vaylantz - L'Endroit du Commencement" qu'une fois par tour.
+  it: |-
+    Aggiungi 1 Magia Terreno "Vaylantz" dal tuo Deck alla tua mano, poi puoi applicare il seguente effetto.
+    ● Distruggi 1 Carta Mostro Pendulum che controlli e, se lo fai, aggiungi 1 "Scambio Senet" dal tuo Deck alla tua mano.
+    Se questa carta è nel tuo Cimitero, eccetto nel turno in cui è stata mandata lì: puoi bandire questa carta; metti 1 Mostro Pendulum "Vaylantz" scoperto dal tuo Extra Deck nella tua Zona Pendulum. Puoi utilizzare ogni effetto di "Guerre Vaylantz - Il Posto dell'Inizio" una sola volta per turno.
+  pt: |-
+    Adicione 1 Magia de Campo "Vaylantz" do seu Deck à sua mão e, depois, você pode aplicar o seguinte efeito.
+    ● Destrua 1 Card de Monstro Pêndulo que você controla e, se isso acontecer, adicione 1 "Troca de Senet" do seu Deck à sua mão.
+    Se este card estiver no seu Cemitério, exceto no turno em que foi enviado para lá: você pode banir este card; coloque 1 Monstro Pêndulo "Vaylantz" com a face para cima do seu Deck Adicional na sua Zona de Pêndulo. Você só pode usar cada efeito de "Guerras Vaylantz - O Local do Começo" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：デッキから「ヴァリアンツ」フィールド魔法カード１枚を手札に加える。その後、以下の効果を適用できる。●自分フィールドのＰモンスターカード１枚を選んで破壊し、デッキから「ポジションチェンジ」１枚を手札に加える。②：墓地のこのカードを除外して発動できる。自分のＥＸデッキから表側表示の「ヴァリアンツ」Ｐモンスター１体を選んで自分のＰゾーンに置く。この効果はこのカードが墓地へ送られたターンには発動できない。
   ko: |-
