--- a/data/cards/14418464.yaml
+++ b/data/cards/14418464.yaml
@@ -2,11 +2,11 @@ konami_id: 17351
 password: 14418464
 name:
   en: Vaylantz Buster Baron
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vaylantz-Sprengbaron
+  es: Barón Buster Vaylantz
+  fr: Baron du Brisement Vaylantz
+  it: Barone Combattente Vaylantz
+  pt: Barão Destruidor Vaylantz
   ja: ヴァリアンツ<ruby>Ｂ<rt>バスター</rt></ruby>－バロン
   ja_romaji: Variantsu Basutā - Baron
   ko: 밸리언츠<ruby>B<rt>버스터</rt></ruby>－바론
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If you control this Special Summoned card: You can target 1 other "Vaylantz" monster in your Main Monster Zone; move that monster you control to an adjacent (horizontal) Monster Zone. If this card in the Monster Zone moves to another Monster Zone: You can target 1 card in either player's Pendulum Zone; place it face-up in its adjacent Spell & Trap Zone as a Continuous Spell. You can only use each effect of "Vaylantz Buster Baron" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls du diese als Spezialbeschwörung beschworene Karte kontrollierst: Du kannst 1 anderes „Vaylantz“-Monster in deiner Main-Monsterzone wählen; bewege jenes Monster, das du kontrollierst, in eine (waagerecht) benachbarte Monsterzone. Falls diese Karte in der Monsterzone in eine andere Monsterzone bewegt wird: Du kannst 1 Karte in der Pendelzone eines beliebigen Spielers wählen; lege sie als Permanenten Zauber offen in ihre benachbarte Zauber- & Fallenzone. Du kannst jeden Effekt von „Vaylantz-Sprengbaron“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si controlas esta carta Invocada de Modo Especial: puedes seleccionar otro monstruo "Vaylantz" en tu Zona de Monstruos Principal; mueve ese monstruo que controlas a una Zona de Monstruos adyacente (horizontal). Si esta carta en la Zona de Monstruos se mueve a otra Zona de Monstruos: puedes seleccionar 1 carta en la Zona de Péndulo de cualquier jugador; ponla boca arriba en su Zona de Magia y Trampas adyacente como una Mágica Continua. Sólo puedes usar cada efecto de "Barón Buster Vaylantz" una vez por turno.
+  fr: |-
+    Si vous contrôlez cette carte Invoquée Spécialement : vous pouvez cibler 1 autre monstre "Vaylantz" dans votre Zone Monstre Main ; déplacez le monstre que vous contrôlez dans une Zone Monstre (horizontale) adjacente. Si cette carte dans la Zone Monstre est déplacée dans une autre Zone Monstre : vous pouvez cibler 1 carte dans la Zone Pendule d'un joueur ; placez-la face recto dans sa Zone Magie & Piège adjacente comme Magie Continue. Vous ne pouvez utiliser chaque effet de "Baron du Brisement Vaylantz" qu'une fois par tour.
+  it: |-
+    Se controlli questa carta Evocata Specialmente: puoi scegliere come bersaglio 1 altro mostro "Vaylantz" nella tua Zona Mostri Main; sposta quel mostro che controlli in una Zona Mostri adiacente (orizzontalmente). Se questa carta nella Zona Mostri si sposta in un'altra Zona Mostri: puoi scegliere come bersaglio 1 carta nella Zona Pendulum di qualsiasi giocatore; mettila scoperta nella sua Zona Magie & Trappole adiacente come una Magia Continua. Puoi utilizzare ogni effetto di "Barone Combattente Vaylantz" una sola volta per turno.
+  pt: |-
+    Se você controlar este card Invocado por Invocação-Especial: você pode escolher 1 outro monstro "Vaylantz" na sua Zona de Monstros Principal; mova esse monstro que você controla para uma Zona de Monstros adjacente (horizontal). Se este card na Zona de Monstros se mover para outra Zona de Monstros: você pode escolher 1 card na Zona de Pêndulo de qualquer duelista; coloque-o com a face para cima em sua Zona de Magias & Armadilhas adjacente como uma Magia Contínua. Você só pode usar cada efeito de "Barão Destruidor Vaylantz" uma vez por turno.
   ja: |-
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚されている場合、このカード以外の自分のメインモンスターゾーンの「ヴァリアンツ」モンスター１体を対象として発動できる。その自分のモンスターの位置を、その隣のモンスターゾーンに移動する。②：モンスターゾーンのこのカードが他のモンスターゾーンに移動した場合、自分または相手のＰゾーンのカード１枚を対象として発動できる。そのカードをその隣の魔法＆罠ゾーンに永続魔法カード扱いとして表側表示で置く。
   ko: |-
@@ -38,11 +43,16 @@ pendulum_scale: 1
 pendulum_effect:
   en: |-
     During your Main Phase: You can Special Summon this card to your Main Monster Zone in its same column, also you cannot Special Summon non-"Vaylantz" monsters for the rest of this turn, except from the Extra Deck. You can only use this effect of "Vaylantz Buster Baron" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während deiner Main Phase: Du kannst diese Karte als Spezialbeschwörung in deine Main-Monsterzone in ihre eigene Spalte beschwören, zusätzlich kannst du für den Rest dieses Spielzugs keine Nicht-„Vaylantz“-Monster als Spezialbeschwörung beschwören, außer vom Extra Deck. Du kannst diesen Effekt von „Vaylantz-Sprengbaron“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Durante tu Main Phase: puedes Invocar esta carta de Modo Especial a tu Zona de Monstruos Principal en su misma columna, y además por el resto de este turno no puedes Invocar de Modo Especial monstruos que no sean "Vaylantz", excepto desde el Deck Extra. Sólo puedes usar este efecto de "Barón Buster Vaylantz" una vez por turno.
+  fr: |-
+    Durant votre Main Phase : vous pouvez Invoquer Spécialement cette carte dans votre Zone Monstre Main dans sa même colonne, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres non-"Vaylantz" le reste de ce tour, sauf depuis l'Extra Deck. Vous ne pouvez utiliser cet effet de "Baron du Brisement Vaylantz" qu'une fois par tour.
+  it: |-
+    Durante la tua Main Phase: puoi Evocare Specialmente questa carta nella tua Zona Mostri Main nella sua stessa colonna, inoltre non puoi Evocare Specialmente mostri non-"Vaylantz" per il resto di questo turno, eccetto dall'Extra Deck. Puoi utilizzare questo effetto di "Barone Combattente Vaylantz" una sola volta per turno.
+  pt: |-
+    Durante sua Fase Principal: você pode Invocar este card por Invocação-Especial na sua Zona de Monstros Principal em sua mesma coluna e, além disso, você não pode Invocar por Invocação-Especial monstros que não sejam "Vaylantz" pelo resto deste turno, exceto do Deck Adicional. Você só pode usar este efeito de "Barão Destruidor Vaylantz" uma vez por turno.
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。このカードを正面の自分のメインモンスターゾーンに特殊召喚する。この効果の発動後、ターン終了時まで自分は「ヴァリアンツ」モンスターしか特殊召喚できない（ＥＸデッキからの特殊召喚は除く）。
   ko: |-
