--- a/data/cards/30430448.yaml
+++ b/data/cards/30430448.yaml
@@ -2,11 +2,11 @@ konami_id: 17376
 password: 30430448
 name:
   en: Runick Freezing Curses
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Runische frostige Flüche
+  es: Maldiciones Congelantes Rúnicas
+  fr: Malédictions Glaciales Runick
+  it: Maledizioni Congelanti Runick
+  pt: Maldições Congelantes Rúnikas
   ja: <ruby>凍<rt>い</rt></ruby>てつく<ruby>呪<rt>のろ</rt></ruby>いの<ruby>神碑<rt>ルーン</rt></ruby>
   ja_romaji: Itetsuku Noroi no Rūn
   ko: 얼어붙은 저주의 루닉
@@ -19,11 +19,31 @@ text:
     ● Target 1 Effect Monster your opponent controls; negate its effects (until the end of this turn), then banish the top 3 cards of your opponent's Deck.
     ● Special Summon 1 "Runick" monster from your Extra Deck to the Extra Monster Zone.
     You can only activate 1 "Runick Freezing Curses" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Aktiviere 1 dieser Effekte, aber überspringe deine nächste Battle Phase nach der Aktivierung;
+    ● Wähle 1 Effektmonster, das dein Gegner kontrolliert; annulliere seine Effekte (bis zum Ende dieses Spielzugs), dann verbanne die obersten 3 Karten des Decks deines Gegners.
+    ● Beschwöre 1 „Runisch“-Monster als Spezialbeschwörung von deinem Extra Deck in die Extra-Monsterzone.
+    Du kannst nur 1 „Runische frostige Flüche“ pro Spielzug aktivieren.
+  es: |-
+    Activa 1 de estos efectos, pero sáltate tu próxima Battle Phase después de la activación;
+    ● Selecciona 1 Monstruo de Efecto que controle tu adversario; niega sus efectos (hasta el final de este turno), y después destierra las 3 cartas de la parte superior del Deck de tu adversario.
+    ● Invoca de Modo Especial, desde tu Deck Extra, 1 monstruo "Rúnico/a" a la Zona de Monstruos Extra.
+    Sólo puedes activar 1 "Maldiciones Congelantes Rúnicas" por turno.
+  fr: |-
+    Activez 1 de ces effets, mais sautez votre prochaine Battle Phase après activation ;
+    ● Ciblez 1 Monstre à Effet contrôlé par votre adversaire ; annulez ses effets (jusqu'à la fin de ce tour), puis bannissez les 3 cartes du dessus du Deck de votre adversaire.
+    ● Invoquez Spécialement 1 monstre "Runick" depuis votre Extra Deck dans la Zone Monstre Extra.
+    Vous ne pouvez activer qu'1 "Malédictions Glaciales Runick" par tour.
+  it: |-
+    Attiva 1 di questi effetti, ma salta la tua prossima Battle Phase dopo l'attivazione;
+    ● Scegli come bersaglio 1 Mostro con Effetto controllato dal tuo avversario; annulla i suoi effetti (fino alla fine di questo turno), poi bandisci le prime 3 carte del Deck del tuo avversario.
+    ● Evoca Specialmente 1 mostro "Runick" dal tuo Extra Deck nella Zona Mostri Extra.
+    Puoi attivare solo 1 "Maledizioni Congelanti Runick" per turno.
+  pt: |-
+    Ative 1 desses efeitos, mas pule sua próxima Fase de Batalha depois da ativação;
+    ● Escolha 1 Monstro de Efeito que seu oponente controla; negue seus efeitos (até o final deste turno) e, depois, bana os 3 cards do topo do Deck do seu oponente.
+    ● Invoque por Invocação-Especial 1 monstro "Rúnika(o)" do seu Deck Adicional na Zona de Monstros Adicional.
+    Você só pode ativar 1 "Maldições Congelantes Rúnikas" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。このカードの発動後、次の自分バトルフェイズをスキップする。
     ●相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターの効果をターン終了時まで無効にする。その後、相手のデッキの上からカードを３枚除外する。
