--- a/data/cards/31562086.yaml
+++ b/data/cards/31562086.yaml
@@ -2,11 +2,11 @@ konami_id: 17373
 password: 31562086
 name:
   en: Runick Tip
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Runische Spitze
+  es: Punta Rúnica
+  fr: Pointe Runick
+  it: Punta Runick
+  pt: Ponta Rúnika
   ja: <ruby>神碑<rt>ルーン</rt></ruby>の<ruby>穂<rt>ほ</rt></ruby><ruby>先<rt>さき</rt></ruby>
   ja_romaji: Rūn no Hosaki
   ko: 루닉의 날끝
@@ -19,11 +19,31 @@ text:
     ● Add 1 "Runick" card from your Deck to your hand, except "Runick Tip", then banish the top card of your opponent's Deck.
     ● Special Summon 1 "Runick" monster from your Extra Deck to the Extra Monster Zone.
     You can only activate 1 "Runick Tip" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Aktiviere 1 dieser Effekte, aber überspringe deine nächste Battle Phase nach der Aktivierung;
+    ● Füge deiner Hand 1 „Runisch“-Karte von deinem Deck hinzu, außer „Runische Spitze“, dann verbanne die oberste Karte des Decks deines Gegners.
+    ● Beschwöre 1 „Runisch“-Monster als Spezialbeschwörung von deinem Extra Deck in die Extra-Monsterzone.
+    Du kannst nur 1 „Runische Spitze“ pro Spielzug aktivieren.
+  es: |-
+    Activa 1 de estos efectos, pero sáltate tu próxima Battle Phase después de la activación;
+    ● Añade a tu mano 1 carta "Rúnico/a" en tu Deck, excepto "Punta Rúnica", y después destierra la carta de la parte superior del Deck de tu adversario.
+    ● Invoca de Modo Especial, desde tu Deck Extra, 1 monstruo "Rúnico/a" a la Zona de Monstruos Extra.
+    Sólo puedes activar 1 "Punta Rúnica" por turno.
+  fr: |-
+    Activez 1 de ces effets, mais sautez votre prochaine Battle Phase après activation ;
+    ● Ajoutez 1 carte "Runick" ("Pointe Runick" exclu) depuis votre Deck à votre main, puis bannissez la carte du dessus du Deck de votre adversaire.
+    ● Invoquez Spécialement 1 monstre "Runick" depuis votre Extra Deck dans la Zone Monstre Extra.
+    Vous ne pouvez activer qu'1 "Pointe Runick" par tour.
+  it: |-
+    Attiva 1 di questi effetti, ma salta la tua prossima Battle Phase dopo l'attivazione;
+    ● Aggiungi 1 carta "Runick" dal tuo Deck alla tua mano, eccetto "Punta Runick", poi bandisci la prima carta del Deck del tuo avversario.
+    ● Evoca Specialmente 1 mostro "Runick" dal tuo Extra Deck nella Zona Mostri Extra.
+    Puoi attivare solo 1 "Punta Runick" per turno.
+  pt: |-
+    Ative 1 desses efeitos, mas pule sua próxima Fase de Batalha depois da ativação;
+    ● Adicione 1 card "Rúnika(o)" do seu Deck à sua mão, exceto "Ponta Rúnika" e, depois, bana o card do topo do Deck do seu oponente.
+    ● Invoque por Invocação-Especial 1 monstro "Rúnika(o)" do seu Deck Adicional na Zona de Monstros Adicional.
+    Você só pode ativar 1 "Ponta Rúnika" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。このカードの発動後、次の自分バトルフェイズをスキップする。
     ●デッキから「神碑の穂先」以外の「神碑」カード１枚を手札に加える。その後、相手のデッキの上からカードを１枚除外する。
