--- a/data/cards/32785578.yaml
+++ b/data/cards/32785578.yaml
@@ -2,11 +2,11 @@ konami_id: 17370
 password: 32785578
 name:
   en: Farewelcome Labrynth
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Lebewillkommens-Labrynth
+  es: Mala Bienvenida del Labrislinto
+  fr: Adieubienvenue Labrynth
+  it: Addiobenvenuto Labrinto
+  pt: Não Boas-vindas a Labrinto
   ja: フェアーウェルカム・ラビュリンス
   ja_romaji: Feāwerukamu Rabyurinsu
   ko: 페어웰컴 라뷰린스
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When a monster declares an attack, while you control a Fiend monster: Target 1 card on the field; negate the attack, and if you do, destroy that targeted card, then, you can Set 1 non-"Labrynth" Normal Trap from your hand or Deck.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn ein Monster einen Angriff deklariert, solange du ein Unterweltler-Monster kontrollierst: Wähle 1 Karte auf dem Spielfeld; annulliere den Angriff und falls du dies tust, zerstöre jene als Ziel gewählte Karte, dann kannst du 1 Normale Nicht-„Labrynth“-Falle von deiner Hand oder deinem Deck setzen.
+  es: |-
+    Cuando un monstruo declara un ataque, mientras tú controles un monstruo Demonio: selecciona 1 carta en el Campo; niega el ataque y, si lo haces, destruye esa carta seleccionada, y después puedes Colocar 1 Trampa Normal en tu mano o Deck que no sea "Labrislinto".
+  fr: |-
+    Lorsqu'un monstre déclare une attaque, tant que vous contrôlez un monstre Démon : ciblez 1 carte sur le Terrain ; annulez l'attaque, et si vous le faites, détruisez la carte ciblée, puis, vous pouvez Poser 1 Piège Normal non-"Labrynth" depuis votre main ou Deck.
+  it: |-
+    Quando un mostro dichiara un attacco, mentre controlli un mostro Demone: scegli come bersaglio 1 carta sul Terreno; annulla l'attacco e, se lo fai, distruggi quella carta scelta come bersaglio, poi puoi Posizionare 1 Trappola Normale non-"Labrinto" dalla tua mano o Deck.
+  pt: |-
+    Quando um monstro declarar um ataque, enquanto você controlar um monstro Demônio: escolha 1 card no campo; negue o ataque e, se isso acontecer, destrua o card alvo e, depois, você pode Baixar 1 Armadilha Normal que não seja "Labrinto" da sua mão ou do Deck.
   ja: |-
     ①：自分フィールドに悪魔族モンスターが存在する場合、自分または相手のモンスターの攻撃宣言時に、フィールドのカード１枚を対象として発動できる。その攻撃を無効にし、対象のカードを破壊する。その後、手札・デッキから「ラビュリンス」カード以外の通常罠カード１枚を選んで自分フィールドにセットできる。
   ko: |-
