--- a/data/cards/37629703.yaml
+++ b/data/cards/37629703.yaml
@@ -2,11 +2,11 @@ konami_id: 17364
 password: 37629703
 name:
   en: Labrynth Chandraglier
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Labrynth-Drachlüsti
+  es: Candedragón del Labrislinto
+  fr: Chandraglier Labrynth
+  it: Labrinto Candragliere
+  pt: Candragela Labrinto
   ja: <ruby>白銀の城の竜飾灯<rt>ラビュリンス・シャンドラ</rt></ruby>
   ja_romaji: Rabyurinsu Shandora
   ko: 라뷰린스 샹드라
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     (Quick Effect): You can send this card from your hand or field to the GY and discard 1 card; Set 1 "Labrynth" Spell/Trap from your hand or Deck. If a monster(s) leaves the field by your Normal Trap effect, while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use each effect of "Labrynth Chandraglier" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    (Schnelleffekt): Du kannst diese Karte von deiner Hand oder Spielfeldseite auf den Friedhof legen und 1 Karte abwerfen; setze 1 „Labrynth“-Zauber/Falle von deiner Hand oder deinem Deck. Falls ein oder mehr Monster das Spielfeld durch deinen Normalen Falleneffekt verlassen, solange diese Karte in deinem Friedhof liegt (außer während des Damage Steps): Du kannst diese Karte deiner Hand hinzufügen. Du kannst jeden Effekt von „Labrynth-Drachlüsti“ nur einmal pro Spielzug verwenden.
+  es: |-
+    (Efecto Rápido): puedes mandar al Cementerio esta carta en tu mano o Campo y descartar 1 carta; Coloca 1 Mágica/Trampa "Labrislinto" en tu mano o Deck. Si uno o más monstruos dejan el Campo por efecto de tu Trampa Normal, mientras esta carta esté en tu Cementerio (excepto durante el Damage Step): puedes añadir esta carta a tu mano. Sólo puedes usar cada efecto de "Candedragón del Labrislinto" una vez por turno.
+  fr: |-
+    (Effet Rapide) : vous pouvez envoyer cette carte depuis votre main ou Terrain au Cimetière, et défaussez 1 carte ; Posez 1 Magie/Piège "Labrynth" depuis votre main ou Deck. Si un ou plusieurs monstres quittent le Terrain par votre effet de Piège Normal, tant que cette carte est dans votre Cimetière (sauf durant la Damage Step) : vous pouvez ajouter cette carte à votre main. Vous ne pouvez utiliser chaque effet de "Chandraglier Labrynth" qu'une fois par tour.
+  it: |-
+    (Effetto Rapido): puoi mandare questa carta dalla tua mano o Terreno al Cimitero e scartare 1 carta; Posiziona 1 Magia/Trappola "Labrinto" dalla tua mano o Deck. Se uno o più mostri lasciano il Terreno per l'effetto di una tua Trappola Normale, mentre questa carta è nel tuo Cimitero (eccetto durante il Damage Step): puoi aggiungere questa carta alla tua mano. Puoi utilizzare ogni effetto di "Labrinto Candragliere" una sola volta per turno.
+  pt: |-
+    (Efeito Rápido): você pode enviar este card da sua mão ou do campo para o Cemitério e descartar 1 card; Baixe 1 Magia/Armadilha "Labrinto" da sua mão ou do Deck. Se um ou mais monstros deixarem o campo pelo efeito de uma Armadilha Normal sua, enquanto este card estiver no seu Cemitério (exceto durante a Etapa de Dano): você pode adicionar este card à sua mão. Você só pode usar cada efeito de "Candragela Labrinto" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札・フィールドのこのカードを墓地へ送り、手札を１枚捨てて発動できる。手札・デッキから「ラビュリンス」魔法・罠カード１枚を選んで自分フィールドにセットする。この効果は相手ターンでも発動できる。②：このカードが墓地に存在する状態で、自分の通常罠カードの効果でモンスターがフィールドから離れた場合に発動できる。このカードを手札に加える。
   ko: |-
