--- a/data/cards/66712905.yaml
+++ b/data/cards/66712905.yaml
@@ -2,11 +2,11 @@ konami_id: 17380
 password: 66712905
 name:
   en: Runick Dispelling
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Runische Entzauberung
+  es: Disipación Rúnica
+  fr: Dissipation Runick
+  it: Dispersione Runick
+  pt: Anulação Rúnika
   ja: <ruby>解<rt>かい</rt></ruby><ruby>呪<rt>じゅ</rt></ruby>の<ruby>神碑<rt>ルーン</rt></ruby>
   ja_romaji: Kaiju no Rūn
   ko: 해주의 루닉
@@ -19,11 +19,31 @@ text:
     ● If your opponent adds a card(s) from their Deck to their hand, except during the Draw Phase, discard 1 random card from their hand, then banish the top 2 cards of their Deck.
     ● Special Summon 1 "Runick" monster from your Extra Deck to the Extra Monster Zone.
     You can only activate 1 "Runick Dispelling" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Aktiviere 1 dieser Effekte, aber überspringe deine nächste Battle Phase nach der Aktivierung;
+    ● Falls dein Gegner seiner Hand eine oder mehr Karten von seinem Deck hinzufügt, außer während der Draw Phase, wirf 1 zufällige Karte von seiner Hand ab, dann verbanne die obersten 2 Karten seines Decks.
+    ● Beschwöre 1 „Runisch“-Monster als Spezialbeschwörung von deinem Extra Deck in die Extra-Monsterzone.
+    Du kannst nur 1 „Runische Entzauberung“ pro Spielzug aktivieren.
+  es: |-
+    Activa 1 de estos efectos, pero sáltate tu próxima Battle Phase después de la activación;
+    ● Si tu adversario añade a su mano una o más cartas en su Deck, excepto durante la Draw Phase, descarta 1 carta al azar de su mano, y después destierra las 2 cartas de la parte superior de su Deck.
+    ● Invoca de Modo Especial, desde tu Deck Extra, 1 monstruo "Rúnico/a" a la Zona de Monstruos Extra.
+    Sólo puedes activar 1 "Disipación Rúnica" por turno.
+  fr: |-
+    Activez 1 de ces effets, mais sautez votre prochaine Battle Phase après activation ;
+    ● Si votre adversaire ajoute une ou plusieurs cartes depuis son Deck à sa main, sauf durant la Draw Phase, défaussez-lui 1 carte au hasard, puis bannissez les 2 cartes du dessus de son Deck.
+    ● Invoquez Spécialement 1 monstre "Runick" depuis votre Extra Deck dans la Zone Monstre Extra.
+    Vous ne pouvez activer qu'1 "Dissipation Runick" par tour.
+  it: |-
+    Attiva 1 di questi effetti, ma salta la tua prossima Battle Phase dopo l'attivazione;
+    ● Se il tuo avversario aggiunge una o più carte dal suo Deck alla sua mano, eccetto durante la Draw Phase, scarta 1 carta a caso dalla sua mano, poi bandisci le prime 2 carte del suo Deck.
+    ● Evoca Specialmente 1 mostro "Runick" dal tuo Extra Deck nella Zona Mostri Extra.
+    Puoi attivare solo 1 "Dispersione Runick" per turno.
+  pt: |-
+    Ative 1 desses efeitos, mas pule sua próxima Fase de Batalha depois da ativação;
+    ● Se seu oponente adicionar um ou mais cards do Deck dele à mão dele, exceto durante a Fase de Compra, descarte 1 card aleatório da mão dele e, depois, bana os 2 cards do topo do Deck dele.
+    ● Invoque por Invocação-Especial 1 monstro "Rúnika(o)" do seu Deck Adicional na Zona de Monstros Adicional.
+    Você só pode ativar 1 "Anulação Rúnika" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。このカードの発動後、次の自分バトルフェイズをスキップする。
     ●相手がドローフェイズ以外でデッキからカードを手札に加えた場合に発動できる。相手の手札をランダムに１枚選んで捨てる。その後、相手のデッキの上からカードを２枚除外する。
