--- a/data/cards/75952542.yaml
+++ b/data/cards/75952542.yaml
@@ -2,11 +2,11 @@ konami_id: 17359
 password: 75952542
 name:
   en: Vaylantz World - Konig Wissen
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vaylantz-Welt - König Wissen
+  es: Mundo Vaylantz - Konig Wissen
+  fr: Monde Vaylantz - Konig Wissen
+  it: Mondo Vaylantz - Konig Wissen
+  pt: Mundo Vaylantz - Konig Wissen
   ja: <ruby>ＶＶ<rt>ヴァリアンツ＝ワールド</rt></ruby>－<ruby>百識公国<rt>ケーニッヒ・ヴィッセン</rt></ruby>
   ja_romaji: Variantsu=Wārudo - Kēnihhi Vissen
   ko: <ruby>VV<rt>밸리언츠＝월드</rt></ruby>－쾨니히 비센
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When this card is activated: Place 1 "Vaylantz" Field Spell from your Deck face-up in your opponent's Field Zone, except "Vaylantz World - Konig Wissen". If there are 2 cards in the Field Zones: The turn player can target 1 Effect Monster in the opponent's Main Monster Zone, in the same column as one of the monsters they control; they place that opponent's monster face-up as a Continuous Spell in their Spell & Trap Zone in its same column. (If the zone is occupied, destroy the occupying card.) The turn player can only use this effect of "Vaylantz World - Konig Wissen" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn diese Karte aktiviert wird: Lege 1 „Vaylantz“-Spielfeldzauber von deinem Deck offen in die Spielfeldzone deines Gegners, außer „Vaylantz-Welt - König Wissen“. Falls 2 Karten in den Spielfeldzonen liegen: Der Zugspieler kann 1 Effektmonster in der Main-Monsterzone des Gegners in derselben Spalte wie ein Monster wählen, das er kontrolliert; er legt jenes Monster des Gegners als Permanenten Zauber offen in seine Zauber- & Fallenzone in seine eigene Spalte. (Falls die Zone belegt ist, zerstöre die sie belegende Karte.) Der Zugspieler kann diesen Effekt von „Vaylantz-Welt - König Wissen“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Cuando esta carta es activada: pon 1 Mágica de Campo "Vaylantz" en tu Deck en la Zona del Campo de tu adversario boca arriba, excepto "Mundo Vaylantz - Konig Wissen". Si hay 2 cartas en las Zonas del Campo: el jugador en turno puede seleccionar 1 Monstruo de Efecto en la Zona de Monstruos Principal del adversario, en la misma columna que uno de los monstruos que controle; el jugador en turno pone ese monstruo del adversario como una Mágica Continua boca arriba en su Zona de Magia y Trampas en su misma columna. (Si la zona está ocupada, destruye la carta ocupante). El jugador en turno sólo puede usar este efecto de "Mundo Vaylantz - Konig Wissen" una vez por turno.
+  fr: |-
+    Lorsque cette carte est activée : placez face recto 1 Magie de Terrain "Vaylantz" ("Monde Vaylantz - Konig Wissen" exclu) depuis votre Deck dans la Zone Terrain de votre adversaire. S'il y a 2 cartes dans les Zones Terrain : le joueur du tour peut cibler 1 Monstre à Effet dans la Zone Monstre Main de l'adversaire, dans la même colonne que l'un des monstres qu'il contrôle ; il place face recto le monstre de l'adversaire comme Magie Continue dans sa Zone Magie & Piège dans sa même colonne. (Si la zone est occupée, détruisez la carte qui l'occupe.) Le joueur du tour ne peut utiliser cet effet de "Monde Vaylantz - Konig Wissen" qu'une fois par tour.
+  it: |-
+    Quando questa carta viene attivata: metti 1 Magia Terreno "Vaylantz" dal tuo Deck scoperta nella Zona Terreno del tuo avversario, eccetto "Mondo Vaylantz - Konig Wissen". Se ci sono 2 carte nelle Zone Terreno: il giocatore di turno può scegliere come bersaglio 1 Mostro con Effetto nella Zona Mostri Main dell'avversario, nella stessa colonna di uno dei mostri che controlla; lui mette quel mostro dell'avversario scoperto come una Magia Continua nella sua Zona Magie & Trappole nella sua stessa colonna. (Se la zona è occupata, distruggi la carta che la occupa.) Il giocatore di turno può utilizzare questo effetto di "Mondo Vaylantz - Konig Wissen" una sola volta per turno.
+  pt: |-
+    Quando este card for ativado: coloque 1 Magia de Campo "Vaylantz" do seu Deck com a face para cima na Zona do Campo do seu oponente, exceto "Mundo Vaylantz - Konig Wissen". Se houver 2 cards nas Zonas do Campo: o duelista do turno pode escolher 1 Monstro de Efeito na Zona de Monstros Principal do oponente, na mesma coluna que um dos monstros que ele controla; ele coloca esse monstro do oponente com a face para cima como uma Magia Contínua na Zona de Magias & Armadilhas dele em sua mesma coluna. (Se a zona estiver ocupada, destrua o card que a estiver ocupando.) O duelista do turno só pode usar este efeito de "Mundo Vaylantz - Konig Wissen" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードの発動時の効果処理として、デッキから「ＶＶ－百識公国」以外の「ヴァリアンツ」フィールド魔法カード１枚を相手のフィールドゾーンに表側表示で置く。②：フィールドゾーンにカードが２枚ある場合、ターンプレイヤーは自身のモンスターの正面の、相手のメインモンスターゾーンの効果モンスター１体を対象として発動できる。その相手モンスターを同じ縦列の相手の魔法＆罠ゾーンに永続魔法カード扱いとして表側表示で置く（置く先にあるカードは破壊される）。
   ko: |-
