--- a/data/cards/76075139.yaml
+++ b/data/cards/76075139.yaml
@@ -2,11 +2,11 @@ konami_id: 17356
 password: 76075139
 name:
   en: Vaylantz Genesis Grand Duke
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vaylantz-Genesis-Großherzog
+  es: Gran Duque Génesis Vaylantz
+  fr: Grand-Duc de la Genèse Vaylantz
+  it: Gran Duca Genesi Vaylantz
+  pt: Grão-Duque Gênese Vaylantz
   ja: ヴァリアンツ<ruby>Ｇ<rt>ジェネシス</rt></ruby>－グランデューク
   ja_romaji: Variantsu Jeneshisu - Gurandyūku
   ko: 밸리언츠<ruby>G<rt>제네시스</rt></ruby>－그랑듀크
@@ -17,11 +17,21 @@ text:
   en: |-
     2 "Vaylantz" monsters
     This face-down card in the Extra Deck must first be either Fusion Summoned, or Special Summoned by Tributing 1 Level 5 or higher non-Fusion "Vaylantz" monster in the same column as the Extra Monster Zone. If this card is Special Summoned: You can target 1 Monster Card in your opponent's Spell & Trap Zone; return it to the hand, and if you do, inflict damage to your opponent equal to its ATK, then, this card gains ATK equal to half the damage inflicted.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    2 „Vaylantz“-Monster
+    Diese verdeckte Karte im Extra Deck muss erst entweder als Fusionsbeschwörung beschworen werden oder als Spezialbeschwörung beschworen werden, indem du 1 „Vaylantz“-Nichtfusions-Monster der Stufe 5 oder höher in derselben Spalte wie die Extra-Monsterzone als Tribut anbietest. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 Monsterkarte in der Zauber- & Fallenzone deines Gegners wählen; gib sie auf die Hand zurück und falls du dies tust, füge deinem Gegner Schaden in Höhe ihrer ATK zu, dann erhält diese Karte ATK in Höhe der Hälfte des zugefügten Schadens.
+  es: |-
+    2 monstruos "Vaylantz"
+    Esta carta boca abajo en el Deck Extra debe ser primero Invocada por Fusión, o Invocada de Modo Especial Sacrificando 1 monstruo "Vaylantz" de Nivel 5 o mayor que no sea de Fusión en la misma columna que la Zona de Monstruos Extra. Si esta carta es Invocada de Modo Especial: puedes seleccionar 1 Carta de Monstruo en la Zona de Magia y Trampas de tu adversario; devuélvela a la mano y, si lo haces, inflige daño a tu adversario igual a su ATK y después, esta carta gana ATK igual a la mitad del daño infligido.
+  fr: |-
+    2 monstres "Vaylantz"
+    Cette carte face verso dans l'Extra Deck doit d'abord être soit Invoquée par Fusion, soit Invoquée Spécialement en Sacrifiant 1 monstre non-Fusion "Vaylantz" de min. Niveau 5 dans la même colonne que la Zone Monstre Extra. Si cette carte est Invoquée Spécialement : vous pouvez cibler 1 Carte Monstre dans la Zone Magie & Piège de votre adversaire ; renvoyez-la à la main, et si vous le faites, infligez des dommages à votre adversaire égaux à son ATK, puis, cette carte gagne une ATK égale à la moitié des dommages infligés.
+  it: |-
+    2 mostri "Vaylantz"
+    Questa carta coperta nell'Extra Deck deve prima essere Evocata tramite Fusione, oppure Evocata Specialmente offrendo come Tributo 1 mostro "Vaylantz" non-Fusione di Livello 5 o superiore nella stessa colonna della Zona Mostri Extra. Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 Carta Mostro nella Zona Magie & Trappole del tuo avversario; falla ritornare nella mano e, se lo fai, infliggi al tuo avversario danno pari al suo ATK, poi questa carta guadagna ATK pari alla metà del danno inflitto.
+  pt: |-
+    2 monstros "Vaylantz"
+    Este card com a face para baixo no Deck Adicional primeiro deve ser Invocado por Invocação-Fusão, ou por Invocação-Especial ao oferecer como Tributo 1 monstro "Vaylantz" de Nível 5 ou mais que não seja de Fusão na mesma coluna que a Zona de Monstros Adicional. Se este card for Invocado por Invocação-Especial: você pode escolher 1 Card de Monstro na Zona de Magias & Armadilhas do seu oponente; devolva-o para a mão e, se isso acontecer, cause dano ao seu oponente igual ao seu ATK e, depois, este card ganha ATK igual à metade do dano causado.
   ja: |-
     「ヴァリアンツ」モンスター×２
     ＥＸデッキの裏側表示のこのカードは、融合召喚及び以下の方法でのみ特殊召喚できる。●融合モンスターを除く、ＥＸモンスターゾーンと同じ縦列の自分のレベル５以上の「ヴァリアンツ」モンスター１体をリリースした場合に特殊召喚できる。①：このカードが特殊召喚に成功した場合、相手の魔法＆罠ゾーンのモンスターカード１枚を対象として発動できる。そのカードを持ち主の手札に戻し、その攻撃力分のダメージを相手に与える。その後、与えたダメージの半分だけこのカードの攻撃力をアップする。
@@ -45,11 +55,31 @@ pendulum_effect:
     ● Special Summon this card to your Main Monster Zone in its same column.
     ● Move 1 monster in your Main Monster Zone to an adjacent (horizontal) Monster Zone.
     You can only use this effect of "Vaylantz Genesis Grand Duke" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst 1 dieser Effekte aktivieren;
+    ● Beschwöre diese Karte als Spezialbeschwörung in deine Main-Monsterzone in ihre eigene Spalte.
+    ● Bewege 1 Monster in deiner Main-Monsterzone in eine (waagerecht) benachbarte Monsterzone.
+    Du kannst diesen Effekt von „Vaylantz-Genesis-Großherzog“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes activar 1 de estos efectos;
+    ● Invoca esta carta de Modo Especial a tu Zona de Monstruos Principal en su misma columna.
+    ● Mueve 1 monstruo en tu Zona de Monstruos Principal a una Zona de Monstruos adyacente (horizontal).
+    Sólo puedes usar este efecto de "Gran Duque Génesis Vaylantz" una vez por turno.
+  fr: |-
+    Vous pouvez activer 1 de ces effets ;
+    ● Invoquez Spécialement cette carte dans votre Zone Monstre Main dans sa même colonne.
+    ● Déplacez 1 monstre dans votre Zone Monstre Main dans une Zone Monstre (horizontale) adjacente.
+    Vous ne pouvez utiliser cet effet de "Grand-Duc de la Genèse Vaylantz" qu'une fois par tour.
+  it: |-
+    Puoi attivare 1 di questi effetti;
+    ● Evoca Specialmente questa carta nella tua Zona Mostri Main nella sua stessa colonna.
+    ● Sposta 1 mostro nella tua Zona Mostri Main in una Zona Mostri adiacente (orizzontalmente).
+    Puoi utilizzare questo effetto di "Gran Duca Genesi Vaylantz" una sola volta per turno.
+  pt: |-
+    Você pode ativar 1 desses efeitos;
+    ● Invoque este card por Invocação-Especial na sua Zona de Monstros Principal em sua mesma coluna.
+    ● Mova 1 monstro na sua Zona de Monstros Principal para uma Zona de Monstros adjacente (horizontal).
+    Você só pode usar este efeito de "Grão-Duque Gênese Vaylantz" uma vez por turno.
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：以下の効果から１つを選択して発動できる。●このカードを正面の自分のメインモンスターゾーンに特殊召喚する。●自分のメインモンスターゾーンのモンスター１体を選び、その位置をその隣のモンスターゾーンに移動する。
   ko: |-
