--- a/data/cards/87897777.yaml
+++ b/data/cards/87897777.yaml
@@ -2,11 +2,11 @@ konami_id: 17353
 password: 87897777
 name:
   en: Vaylantz Mad Marquess
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vaylantz-Wutmarquis
+  es: Marqués Maniático Vaylantz
+  fr: Marquis de la Folie Vaylantz
+  it: Marchese Pazzo Vaylantz
+  pt: Marquês Enlouquecido Vaylantz
   ja: ヴァリアンツ<ruby>Ｍ<rt>マッド</rt></ruby>－マーキス
   ja_romaji: Variantsu Maddo - Mākisu
   ko: 밸리언츠<ruby>M<rt>마드</rt></ruby>－마키스
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     During your Main Phase: You can roll a six-sided die, excavate that many cards from the top of your Deck (or as many as you can), and if you do, you can add 1 excavated "Vaylantz" card to your hand, also shuffle the rest into the Deck. If this card in the Monster Zone moves to another Monster Zone: You can roll a six-sided die, and if you roll a 2, 3, 4, or 5, Special Summon 1 Monster Card from your Spell & Trap Zone to your Main Monster Zone in its same column. You can only use each effect of "Vaylantz Mad Marquess" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während deiner Main Phase: Du kannst einen sechsseitigen Würfel werfen, soviele oberste Karten deines Decks (oder so viele, wie du kannst) ausgraben und falls du dies tust, kannst du deiner Hand 1 ausgegrabene „Vaylantz“-Karte hinzufügen, zusätzlich mische die restlichen ins Deck. Falls diese Karte in der Monsterzone in eine andere Monsterzone bewegt wird: Du kannst einen sechsseitigen Würfel werfen und falls du eine 2, 3, 4 oder 5 würfelst, beschwöre 1 Monsterkarte als Spezialbeschwörung von deiner Zauber- & Fallenzone in deine Main-Monsterzone in ihre eigene Spalte. Du kannst jeden Effekt von „Vaylantz-Wutmarquis“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Durante tu Main Phase: puedes lanzar un dado de seis caras, excavar ese mismo número de cartas de la parte superior de tu Deck (o tantas como puedas) y, si lo haces, puedes añadir a tu mano 1 carta "Vaylantz" excavada, y además barajar el resto al Deck. Si esta carta en la Zona de Monstruos se mueve a otra Zona de Monstruos: puedes lanzar un dado de seis caras, y si sale un 2, 3, 4 o 5, Invocar de Modo Especial 1 Carta de Monstruo en tu Zona de Magia y Trampas a tu Zona de Monstruos Principal en su misma columna. Sólo puedes usar cada efecto de "Marqués Maniático Vaylantz" una vez por turno.
+  fr: |-
+    Durant votre Main Phase : vous pouvez lancer un dé à six faces, dévoilez autant de cartes du dessus de votre Deck (ou autant que vous pouvez), et si vous le faites, vous pouvez ajouter 1 carte "Vaylantz" dévoilée à votre main, et aussi, mélangez les cartes restantes dans le Deck. Si cette carte dans la Zone Monstre est déplacée dans une autre Zone Monstre : vous pouvez lancer un dé à six faces, et si le résultat est 2, 3, 4 ou 5, Invoquez Spécialement 1 Carte Monstre depuis votre Zone Magie & Piège dans votre Zone Monstre Main dans sa même colonne. Vous ne pouvez utiliser chaque effet de "Marquis de la Folie Vaylantz" qu'une fois par tour.
+  it: |-
+    Durante la tua Main Phase: puoi tirare un dado a sei facce, dissotterra quel numero di carte dalla cima del tuo Deck (o tante quante puoi) e, se lo fai, puoi aggiungere 1 carta "Vaylantz" dissotterrata alla tua mano, inoltre mischia il resto nel Deck. Se questa carta nella Zona Mostri si sposta in un'altra Zona Mostri: puoi tirare un dado a sei facce e, se tiri un 2, 3, 4 o 5, Evoca Specialmente 1 Carta Mostro dalla tua Zona Magie & Trappole nella tua Zona Mostri Main nella sua stessa colonna. Puoi utilizzare ogni effetto di "Marchese Pazzo Vaylantz" una sola volta per turno.
+  pt: |-
+    Durante sua Fase Principal: você pode lançar um dado de seis faces, escavar esse número de cards do topo do seu Deck (ou tantos quanto puder) e, se isso acontecer, você pode adicionar 1 card "Vaylantz" escavado à sua mão e, além disso, embaralhe o resto no Deck. Se este card na Zona de Monstros se mover para outra Zona de Monstros: você pode lançar um dado de seis faces, e se o resultado for 2, 3, 4 ou 5, Invoque por Invocação-Especial 1 Card de Monstro da sua Zona de Magias & Armadilhas na sua Zona de Monstros Principal em sua mesma coluna. Você só pode usar cada efeito de "Marquês Enlouquecido Vaylantz" uma vez por turno.
   ja: |-
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。サイコロを１回振り、出た目の数だけ自分のデッキの上からカードをめくる。その中から「ヴァリアンツ」カード１枚を選んで手札に加える事ができる。残りはデッキに戻す。②：モンスターゾーンのこのカードが他のモンスターゾーンに移動した場合に発動できる。サイコロを１回振り、２～５が出た場合、自分の魔法＆罠ゾーンのモンスターカード１枚を選んでその正面の自分のメインモンスターゾーンに特殊召喚する。
   ko: |-
@@ -38,11 +43,16 @@ pendulum_scale: 1
 pendulum_effect:
   en: |-
     If "Vaylantz World - Konig Wissen" is in a Field Zone or if you control a FIRE "Vaylantz" monster: You can Special Summon this card to your Main Monster Zone in its same column. You can only use this effect of "Vaylantz Mad Marquess" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls „Vaylantz-Welt - König Wissen“ in einer Spielfeldzone liegt oder falls du ein FEUER „Vaylantz“-Monster kontrollierst: Du kannst diese Karte als Spezialbeschwörung in deine Main-Monsterzone in ihre eigene Spalte beschwören. Du kannst diesen Effekt von „Vaylantz-Wutmarquis“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si "Mundo Vaylantz - Konig Wissen" está en una Zona del Campo o si controlas un monstruo "Vaylantz" de FUEGO: puedes Invocar esta carta de Modo Especial a tu Zona de Monstruos Principal en su misma columna. Sólo puedes usar este efecto de "Marqués Maniático Vaylantz" una vez por turno.
+  fr: |-
+    Si "Monde Vaylantz - Konig Wissen" est dans une Zone Terrain ou si vous contrôlez un monstre "Vaylantz" FEU : vous pouvez Invoquer Spécialement cette carte dans votre Zone Monstre Main dans sa même colonne. Vous ne pouvez utiliser cet effet de "Marquis de la Folie Vaylantz" qu'une fois par tour.
+  it: |-
+    Se "Mondo Vaylantz - Konig Wissen" è in una Zona Terreno o se controlli un mostro "Vaylantz" FUOCO: puoi Evocare Specialmente questa carta nella tua Zona Mostri Main nella sua stessa colonna. Puoi utilizzare questo effetto di "Marchese Pazzo Vaylantz" una sola volta per turno.
+  pt: |-
+    Se "Mundo Vaylantz - Konig Wissen" estiver em uma Zona do Campo ou se você controlar um monstro "Vaylantz" de FOGO: você pode Invocar este card por Invocação-Especial na sua Zona de Monstros Principal em sua mesma coluna. Você só pode usar este efeito de "Marquês Enlouquecido Vaylantz" uma vez por turno.
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：フィールドゾーンに「ＶＶ－百識公国」が存在する場合、または自分フィールドに炎属性の「ヴァリアンツ」モンスターが存在する場合に発動できる。このカードを正面の自分のメインモンスターゾーンに特殊召喚する。
   ko: |-
