--- a/data/cards/93229151.yaml
+++ b/data/cards/93229151.yaml
@@ -2,11 +2,11 @@ konami_id: 17378
 password: 93229151
 name:
   en: Runick Smiting Storm
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Runischer peinigender Sturm
+  es: Tormenta Destructora Rúnica
+  fr: Tempête Cinglante Runick
+  it: Tempesta Punitrice Runick
+  pt: Tempestade Punitiva Rúnika
   ja: <ruby>怒<rt>いか</rt></ruby>れる<ruby>嵐<rt>あらし</rt></ruby>の<ruby>神碑<rt>ルーン</rt></ruby>
   ja_romaji: Ikareru Arashi no Rūn
   ko: 성난 폭풍의 루닉
@@ -19,11 +19,31 @@ text:
     ● Banish cards from the top of your opponent's Deck, up to the number of cards they control.
     ● Special Summon 1 "Runick" monster from your Extra Deck to the Extra Monster Zone.
     You can only activate 1 "Runick Smiting Storm" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Aktiviere 1 dieser Effekte, aber überspringe deine nächste Battle Phase nach der Aktivierung;
+    ● Verbanne die obersten Karten des Decks deines Gegners bis zur Höhe der Anzahl der Karten, die er kontrolliert.
+    ● Beschwöre 1 „Runisch“-Monster als Spezialbeschwörung von deinem Extra Deck in die Extra-Monsterzone.
+    Du kannst nur 1 „Runischer peinigender Sturm“ pro Spielzug aktivieren.
+  es: |-
+    Activa 1 de estos efectos, pero sáltate tu próxima Battle Phase después de la activación;
+    ● Destierra cartas de la parte superior del Deck de tu adversario hasta el número de cartas que controle.
+    ● Invoca de Modo Especial, desde tu Deck Extra, 1 monstruo "Rúnico/a" a la Zona de Monstruos Extra.
+    Sólo puedes activar 1 "Tormenta Destructora Rúnica" por turno.
+  fr: |-
+    Activez 1 de ces effets, mais sautez votre prochaine Battle Phase après activation ;
+    ● Bannissez un nombre de cartes du dessus du Deck de votre adversaire, inférieur ou égal au nombre de cartes qu'il contrôle.
+    ● Invoquez Spécialement 1 monstre "Runick" depuis votre Extra Deck dans la Zone Monstre Extra.
+    Vous ne pouvez activer qu'1 "Tempête Cinglante Runick" par tour.
+  it: |-
+    Attiva 1 di questi effetti, ma salta la tua prossima Battle Phase dopo l'attivazione;
+    ● Bandisci carte dalla cima del Deck del tuo avversario, fino al numero di carte che controlla.
+    ● Evoca Specialmente 1 mostro "Runick" dal tuo Extra Deck nella Zona Mostri Extra.
+    Puoi attivare solo 1 "Tempesta Punitrice Runick" per turno.
+  pt: |-
+    Ative 1 desses efeitos, mas pule sua próxima Fase de Batalha depois da ativação;
+    ● Bana cards do topo do Deck do seu oponente até o número de cards que ele controla.
+    ● Invoque por Invocação-Especial 1 monstro "Rúnika(o)" do seu Deck Adicional na Zona de Monstros Adicional.
+    Você só pode ativar 1 "Tempestade Punitiva Rúnika" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。このカードの発動後、次の自分バトルフェイズをスキップする。
     ●相手フィールドのカードの数まで相手のデッキの上からカードを除外する。
